Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I6566ca37f873f5d6ddb7cea84050bde56a2dab4b

--- a/res/values-bs/arrays.xml
+++ b/res/values-bs/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Vrijeme za spavanje"</item>
-    <item msgid="4152450357280759894">"Vožnja"</item>
-    <item msgid="7096549258219399423">"Uvjerljivo"</item>
-    <item msgid="2760716776980432977">"Upravljano"</item>
-    <item msgid="601734478369121764">"Zvijezda"</item>
-    <item msgid="6243809315432780521">"Kalendar"</item>
-    <item msgid="4913577903148415331">"Vrijeme"</item>
-    <item msgid="3653377604690057780">"Pozorište"</item>
-    <item msgid="3843711267408385410">"Cvijet"</item>
+    <item msgid="2750940760340557109">"Polumjesec"</item>
+    <item msgid="8513969636586738035">"Automobil"</item>
+    <item msgid="957392343846370509">"Um osobe"</item>
+    <item msgid="6734164279667121348">"Kalendar"</item>
+    <item msgid="4139559120353528558">"Sat"</item>
+    <item msgid="5157711296814769020">"Suncobran"</item>
+    <item msgid="6635328761318954115">"Šator"</item>
+    <item msgid="1711994778883392255">"Filmska traka"</item>
+    <item msgid="9097658401859604879">"Kontroler za igre"</item>
+    <item msgid="755931364157422565">"Bučica za teretanu"</item>
+    <item msgid="8894207806795738429">"Osoba baca loptu"</item>
+    <item msgid="2274801572149555103">"Osoba udara"</item>
+    <item msgid="8795037201506843325">"Plivanje"</item>
+    <item msgid="3558421426169430451">"Osoba pješači"</item>
+    <item msgid="7455070421232184932">"Golf"</item>
+    <item msgid="5841773092449126508">"Alati radionice"</item>
+    <item msgid="4595330511709890409">"Aktovka"</item>
+    <item msgid="8352738347856724389">"Zvijezda"</item>
+    <item msgid="7082783098151998721">"Cvijet lotosa"</item>
+    <item msgid="5772220259409264724">"Nadzornik"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
