--- a/res/values-lo/arrays.xml
+++ b/res/values-lo/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"ເວລານອນ"</item>
-    <item msgid="4152450357280759894">"ການຂັບຂີ່"</item>
-    <item msgid="7096549258219399423">"ສົມຈິງ"</item>
-    <item msgid="2760716776980432977">"ທີ່ມີການຈັດການ"</item>
-    <item msgid="601734478369121764">"ດາວ"</item>
-    <item msgid="6243809315432780521">"ປະຕິທິນ"</item>
-    <item msgid="4913577903148415331">"ເວລາ"</item>
-    <item msgid="3653377604690057780">"ໂຮງລະຄອນ"</item>
-    <item msgid="3843711267408385410">"ດອກໄມ້"</item>
+    <item msgid="2750940760340557109">"ເດືອນເຄິ່ງດວງ"</item>
+    <item msgid="8513969636586738035">"ລົດ"</item>
+    <item msgid="957392343846370509">"ຈິດໃຈຄົນ"</item>
+    <item msgid="6734164279667121348">"ປະຕິທິນ"</item>
+    <item msgid="4139559120353528558">"ໂມງ"</item>
+    <item msgid="5157711296814769020">"ຄັນຮົ່ມຫາດຊາຍ"</item>
+    <item msgid="6635328761318954115">"ເຕັ້ນ"</item>
+    <item msgid="1711994778883392255">"ມ້ວນຟີມ"</item>
+    <item msgid="9097658401859604879">"ມືເກມ"</item>
+    <item msgid="755931364157422565">"ດຳເບວສຳລັບຢີມ"</item>
+    <item msgid="8894207806795738429">"ຄົນໂຍນບານ"</item>
+    <item msgid="2274801572149555103">"ຄົນເຕະ"</item>
+    <item msgid="8795037201506843325">"ລອຍນ້ຳ"</item>
+    <item msgid="3558421426169430451">"ຄົນຍ່າງປ່າ"</item>
+    <item msgid="7455070421232184932">"ກັອບ"</item>
+    <item msgid="5841773092449126508">"ເຄື່ອງມືເວີກຊັອບ"</item>
+    <item msgid="4595330511709890409">"ກະເປົາເອກະສານ"</item>
+    <item msgid="8352738347856724389">"ດາວ"</item>
+    <item msgid="7082783098151998721">"ດອກບົວ"</item>
+    <item msgid="5772220259409264724">"ຫົວໜ້າວຽກ"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
