--- a/res/values-nb/arrays.xml
+++ b/res/values-nb/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Sengetid"</item>
-    <item msgid="4152450357280759894">"Kjøring"</item>
-    <item msgid="7096549258219399423">"Oppslukende"</item>
-    <item msgid="2760716776980432977">"Administrert"</item>
-    <item msgid="601734478369121764">"Stjerne"</item>
-    <item msgid="6243809315432780521">"Kalender"</item>
-    <item msgid="4913577903148415331">"Tid"</item>
-    <item msgid="3653377604690057780">"Teater"</item>
-    <item msgid="3843711267408385410">"Blomst"</item>
+    <item msgid="2750940760340557109">"Halvmåne"</item>
+    <item msgid="8513969636586738035">"Bil"</item>
+    <item msgid="957392343846370509">"Sinnet til en person"</item>
+    <item msgid="6734164279667121348">"Kalender"</item>
+    <item msgid="4139559120353528558">"Klokke"</item>
+    <item msgid="5157711296814769020">"Strandparasoll"</item>
+    <item msgid="6635328761318954115">"Telt"</item>
+    <item msgid="1711994778883392255">"Filmspole"</item>
+    <item msgid="9097658401859604879">"Spillkontroller"</item>
+    <item msgid="755931364157422565">"Håndvekt"</item>
+    <item msgid="8894207806795738429">"Person som kaster en ball"</item>
+    <item msgid="2274801572149555103">"Person som sparker"</item>
+    <item msgid="8795037201506843325">"Svømming"</item>
+    <item msgid="3558421426169430451">"Person som går tur"</item>
+    <item msgid="7455070421232184932">"Golf"</item>
+    <item msgid="5841773092449126508">"Verktøy på verksted"</item>
+    <item msgid="4595330511709890409">"Koffert"</item>
+    <item msgid="8352738347856724389">"Stjerne"</item>
+    <item msgid="7082783098151998721">"Lotusblomst"</item>
+    <item msgid="5772220259409264724">"Leder"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
