--- a/res/values-zh-rTW/arrays.xml
+++ b/res/values-zh-rTW/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"就寢時間"</item>
-    <item msgid="4152450357280759894">"開車"</item>
-    <item msgid="7096549258219399423">"沉浸"</item>
-    <item msgid="2760716776980432977">"受管理"</item>
-    <item msgid="601734478369121764">"星星"</item>
-    <item msgid="6243809315432780521">"日曆"</item>
-    <item msgid="4913577903148415331">"時間"</item>
-    <item msgid="3653377604690057780">"劇院"</item>
-    <item msgid="3843711267408385410">"花朵"</item>
+    <item msgid="2750940760340557109">"半月"</item>
+    <item msgid="8513969636586738035">"車輛"</item>
+    <item msgid="957392343846370509">"人的頭腦"</item>
+    <item msgid="6734164279667121348">"日曆"</item>
+    <item msgid="4139559120353528558">"時鐘"</item>
+    <item msgid="5157711296814769020">"沙灘遮陽傘"</item>
+    <item msgid="6635328761318954115">"帳篷"</item>
+    <item msgid="1711994778883392255">"舊電影膠卷"</item>
+    <item msgid="9097658401859604879">"遊戲控制器"</item>
+    <item msgid="755931364157422565">"健身啞鈴"</item>
+    <item msgid="8894207806795738429">"有人在擲球"</item>
+    <item msgid="2274801572149555103">"有人在踢球"</item>
+    <item msgid="8795037201506843325">"游泳"</item>
+    <item msgid="3558421426169430451">"有人在健行"</item>
+    <item msgid="7455070421232184932">"高爾夫"</item>
+    <item msgid="5841773092449126508">"工作坊工具"</item>
+    <item msgid="4595330511709890409">"公事包"</item>
+    <item msgid="8352738347856724389">"星星"</item>
+    <item msgid="7082783098151998721">"蓮花"</item>
+    <item msgid="5772220259409264724">"監督者"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
