--- a/res/values-ar/arrays.xml
+++ b/res/values-ar/arrays.xml
@@ -219,7 +219,7 @@
     <item msgid="4140820386622184831">"كتم صوت/إلغاء كتم صوت الميكروفون"</item>
     <item msgid="317746827951691657">"عرض الإعلام المنبثق"</item>
     <item msgid="5679422988212309779">"وسائط المشروع"</item>
-    <item msgid="6454031639780101439">"تفعيل الشبكة الافتراضية الخاصة"</item>
+    <item msgid="6454031639780101439">"‏تفعيل شبكة VPN"</item>
     <item msgid="2441327072846850561">"كتابة الخلفية"</item>
     <item msgid="2162456889277589861">"تركيبة مساعدة"</item>
     <item msgid="4644645617399271070">"لقطة شاشة مساعدة"</item>
@@ -286,7 +286,7 @@
     <item msgid="2526677383312751932">"كتم صوت/إلغاء كتم صوت الميكروفون"</item>
     <item msgid="4000577305179914546">"عرض الإعلام المنبثق"</item>
     <item msgid="8660207174515570558">"وسائط المشروع"</item>
-    <item msgid="3904996949561946108">"تفعيل الشبكة الافتراضية الخاصة"</item>
+    <item msgid="3904996949561946108">"‏تفعيل شبكة VPN"</item>
     <item msgid="504052124101832515">"كتابة الخلفية"</item>
     <item msgid="1657182386933187909">"تركيبة مساعدة"</item>
     <item msgid="437655393941385937">"لقطة شاشة مساعدة"</item>
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"وقت النوم"</item>
-    <item msgid="4152450357280759894">"القيادة"</item>
-    <item msgid="7096549258219399423">"تجربة غامرة"</item>
-    <item msgid="2760716776980432977">"تجربة مُدارة"</item>
-    <item msgid="601734478369121764">"نجمة"</item>
-    <item msgid="6243809315432780521">"التقويم"</item>
-    <item msgid="4913577903148415331">"الوقت"</item>
-    <item msgid="3653377604690057780">"مسرح"</item>
-    <item msgid="3843711267408385410">"زهرة"</item>
+    <item msgid="2750940760340557109">"نصف بدر"</item>
+    <item msgid="8513969636586738035">"سيارة"</item>
+    <item msgid="957392343846370509">"عقل شخص"</item>
+    <item msgid="6734164279667121348">"التقويم"</item>
+    <item msgid="4139559120353528558">"ساعة"</item>
+    <item msgid="5157711296814769020">"مظلة شاطئ"</item>
+    <item msgid="6635328761318954115">"خيمة"</item>
+    <item msgid="1711994778883392255">"بكرة فيلم"</item>
+    <item msgid="9097658401859604879">"ذراع التحكّم في الألعاب"</item>
+    <item msgid="755931364157422565">"دمبل في صالة رياضية"</item>
+    <item msgid="8894207806795738429">"شخص يرمي كرة"</item>
+    <item msgid="2274801572149555103">"شخص يركل"</item>
+    <item msgid="8795037201506843325">"سباحة"</item>
+    <item msgid="3558421426169430451">"شخص يتنزه في الطبيعة"</item>
+    <item msgid="7455070421232184932">"غولف"</item>
+    <item msgid="5841773092449126508">"أدوات ورشة عمل"</item>
+    <item msgid="4595330511709890409">"حقيبة يد"</item>
+    <item msgid="8352738347856724389">"نجمة"</item>
+    <item msgid="7082783098151998721">"زهرة لوتس"</item>
+    <item msgid="5772220259409264724">"مشرف"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
