--- a/res/values-as/arrays.xml
+++ b/res/values-as/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"বেডটাইম"</item>
-    <item msgid="4152450357280759894">"গাড়ী চলোৱা"</item>
-    <item msgid="7096549258219399423">"ইমাৰ্ছিভ"</item>
-    <item msgid="2760716776980432977">"পৰিচালিত"</item>
-    <item msgid="601734478369121764">"তৰা"</item>
-    <item msgid="6243809315432780521">"কেলেণ্ডাৰ"</item>
-    <item msgid="4913577903148415331">"সময়"</item>
-    <item msgid="3653377604690057780">"থিয়েটাৰ"</item>
-    <item msgid="3843711267408385410">"ফুল"</item>
+    <item msgid="2750940760340557109">"অৰ্ধ-চন্দ্ৰ"</item>
+    <item msgid="8513969636586738035">"গাড়ী"</item>
+    <item msgid="957392343846370509">"ব্যক্তিৰ মন"</item>
+    <item msgid="6734164279667121348">"কেলেণ্ডাৰ"</item>
+    <item msgid="4139559120353528558">"ঘড়ী"</item>
+    <item msgid="5157711296814769020">"সমুদ্ৰতীৰৰ ছাতি"</item>
+    <item msgid="6635328761318954115">"তম্বু"</item>
+    <item msgid="1711994778883392255">"ফিল্মৰ ৰীল"</item>
+    <item msgid="9097658401859604879">"গে’ম নিয়ন্ত্ৰক"</item>
+    <item msgid="755931364157422565">"ব্যায়ামাগাৰৰ ডাম্বেল"</item>
+    <item msgid="8894207806795738429">"বল দলিয়াই থকা ব্যক্তি"</item>
+    <item msgid="2274801572149555103">"গোৰ মাৰি থকা ব্যক্তি"</item>
+    <item msgid="8795037201506843325">"সাঁতোৰ"</item>
+    <item msgid="3558421426169430451">"পাহাৰ বগাই থকা ব্যক্তি"</item>
+    <item msgid="7455070421232184932">"গল্ফ"</item>
+    <item msgid="5841773092449126508">"কৰ্মশালাৰ সঁজুলি"</item>
+    <item msgid="4595330511709890409">"ব্ৰিফকেছ"</item>
+    <item msgid="8352738347856724389">"তৰাচিহ্ন"</item>
+    <item msgid="7082783098151998721">"পদুম ফুল"</item>
+    <item msgid="5772220259409264724">"তদাৰক কৰোঁতা"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
