--- a/res/values-be/arrays.xml
+++ b/res/values-be/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Час сну"</item>
-    <item msgid="4152450357280759894">"За рулём"</item>
-    <item msgid="7096549258219399423">"З эфектам прысутнасці"</item>
-    <item msgid="2760716776980432977">"Пад кіраваннем"</item>
-    <item msgid="601734478369121764">"Зорка"</item>
-    <item msgid="6243809315432780521">"Каляндар"</item>
-    <item msgid="4913577903148415331">"Час"</item>
-    <item msgid="3653377604690057780">"Тэатр"</item>
-    <item msgid="3843711267408385410">"Кветка"</item>
+    <item msgid="2750940760340557109">"Паўмесяц"</item>
+    <item msgid="8513969636586738035">"Аўтамабіль"</item>
+    <item msgid="957392343846370509">"Розум чалавека"</item>
+    <item msgid="6734164279667121348">"Каляндар"</item>
+    <item msgid="4139559120353528558">"Гадзіннік"</item>
+    <item msgid="5157711296814769020">"Пляжны парасон"</item>
+    <item msgid="6635328761318954115">"Палатка"</item>
+    <item msgid="1711994778883392255">"Кінаплёнка"</item>
+    <item msgid="9097658401859604879">"Гульнявы кантролер"</item>
+    <item msgid="755931364157422565">"Трэнажорная гантэль"</item>
+    <item msgid="8894207806795738429">"Чалавек кідае мяч"</item>
+    <item msgid="2274801572149555103">"Чалавек б’е нагой"</item>
+    <item msgid="8795037201506843325">"Плаванне"</item>
+    <item msgid="3558421426169430451">"Чалавек у паходзе"</item>
+    <item msgid="7455070421232184932">"Гольф"</item>
+    <item msgid="5841773092449126508">"Інструменты майстэрні"</item>
+    <item msgid="4595330511709890409">"Партфель"</item>
+    <item msgid="8352738347856724389">"Зорка"</item>
+    <item msgid="7082783098151998721">"Кветка лотаса"</item>
+    <item msgid="5772220259409264724">"Наглядчык"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
