--- a/res/values-ca/arrays.xml
+++ b/res/values-ca/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Hora de dormir"</item>
-    <item msgid="4152450357280759894">"Conducció"</item>
-    <item msgid="7096549258219399423">"Immersiu"</item>
-    <item msgid="2760716776980432977">"Gestionat"</item>
-    <item msgid="601734478369121764">"Estrella"</item>
-    <item msgid="6243809315432780521">"Calendari"</item>
-    <item msgid="4913577903148415331">"Hora"</item>
-    <item msgid="3653377604690057780">"Teatre"</item>
-    <item msgid="3843711267408385410">"Flor"</item>
+    <item msgid="2750940760340557109">"Mitja lluna"</item>
+    <item msgid="8513969636586738035">"Cotxe"</item>
+    <item msgid="957392343846370509">"Ment d\'una persona"</item>
+    <item msgid="6734164279667121348">"Calendari"</item>
+    <item msgid="4139559120353528558">"Rellotge"</item>
+    <item msgid="5157711296814769020">"Para-sol"</item>
+    <item msgid="6635328761318954115">"Tenda de campanya"</item>
+    <item msgid="1711994778883392255">"Rodet de pel·lícula"</item>
+    <item msgid="9097658401859604879">"Comandament de joc"</item>
+    <item msgid="755931364157422565">"Pesa de gimnàs"</item>
+    <item msgid="8894207806795738429">"Persona que llança una pilota"</item>
+    <item msgid="2274801572149555103">"Persona que fa una puntada de peu"</item>
+    <item msgid="8795037201506843325">"Natació"</item>
+    <item msgid="3558421426169430451">"Persona que fa excursionisme"</item>
+    <item msgid="7455070421232184932">"Golf"</item>
+    <item msgid="5841773092449126508">"Eines d\'un taller"</item>
+    <item msgid="4595330511709890409">"Maletí"</item>
+    <item msgid="8352738347856724389">"Estrella"</item>
+    <item msgid="7082783098151998721">"Flor de lotus"</item>
+    <item msgid="5772220259409264724">"Supervisor"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
