--- a/res/values-es/arrays.xml
+++ b/res/values-es/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Descanso"</item>
-    <item msgid="4152450357280759894">"En coche"</item>
-    <item msgid="7096549258219399423">"Inmersivo"</item>
-    <item msgid="2760716776980432977">"Gestionado"</item>
-    <item msgid="601734478369121764">"Estrella"</item>
-    <item msgid="6243809315432780521">"Calendario"</item>
-    <item msgid="4913577903148415331">"Hora"</item>
-    <item msgid="3653377604690057780">"Teatro"</item>
-    <item msgid="3843711267408385410">"Flor"</item>
+    <item msgid="2750940760340557109">"Media luna"</item>
+    <item msgid="8513969636586738035">"Coche"</item>
+    <item msgid="957392343846370509">"Mente de una persona"</item>
+    <item msgid="6734164279667121348">"Calendario"</item>
+    <item msgid="4139559120353528558">"Reloj"</item>
+    <item msgid="5157711296814769020">"Sombrilla"</item>
+    <item msgid="6635328761318954115">"Tienda de campaña"</item>
+    <item msgid="1711994778883392255">"Carrete vintage"</item>
+    <item msgid="9097658401859604879">"Mandos de juegos"</item>
+    <item msgid="755931364157422565">"Mancuerna de gimnasio"</item>
+    <item msgid="8894207806795738429">"Persona lanzando una pelota"</item>
+    <item msgid="2274801572149555103">"Persona dando una patada"</item>
+    <item msgid="8795037201506843325">"Natación"</item>
+    <item msgid="3558421426169430451">"Persona haciendo senderismo"</item>
+    <item msgid="7455070421232184932">"Golf"</item>
+    <item msgid="5841773092449126508">"Herramientas del taller"</item>
+    <item msgid="4595330511709890409">"Maletín"</item>
+    <item msgid="8352738347856724389">"Estrella"</item>
+    <item msgid="7082783098151998721">"Flor de loto"</item>
+    <item msgid="5772220259409264724">"Supervisor"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
