--- a/res/values-eu/arrays.xml
+++ b/res/values-eu/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Lo egiteko garaia"</item>
-    <item msgid="4152450357280759894">"Gidatzea"</item>
-    <item msgid="7096549258219399423">"Murgiltzailea"</item>
-    <item msgid="2760716776980432977">"Kudeatua"</item>
-    <item msgid="601734478369121764">"Izarra"</item>
-    <item msgid="6243809315432780521">"Egutegia"</item>
-    <item msgid="4913577903148415331">"Ordua"</item>
-    <item msgid="3653377604690057780">"Antzerkia"</item>
-    <item msgid="3843711267408385410">"Lorea"</item>
+    <item msgid="2750940760340557109">"Ilargierdia"</item>
+    <item msgid="8513969636586738035">"Autoa"</item>
+    <item msgid="957392343846370509">"Pertsona baten burua"</item>
+    <item msgid="6734164279667121348">"Egutegia"</item>
+    <item msgid="4139559120353528558">"Erlojua"</item>
+    <item msgid="5157711296814769020">"Itzalkina"</item>
+    <item msgid="6635328761318954115">"Kanpin-denda"</item>
+    <item msgid="1711994778883392255">"Film-bobina"</item>
+    <item msgid="9097658401859604879">"Joko-kontrolagailua"</item>
+    <item msgid="755931364157422565">"Gimnasioko pisua"</item>
+    <item msgid="8894207806795738429">"Pertsona bat baloi bat botatzen"</item>
+    <item msgid="2274801572149555103">"Pertsona bat ostiko egiten"</item>
+    <item msgid="8795037201506843325">"Igeriketa"</item>
+    <item msgid="3558421426169430451">"Pertsona bat mendian"</item>
+    <item msgid="7455070421232184932">"Golfa"</item>
+    <item msgid="5841773092449126508">"Lantegiko tresnak"</item>
+    <item msgid="4595330511709890409">"Paper-zorroa"</item>
+    <item msgid="8352738347856724389">"Izarra"</item>
+    <item msgid="7082783098151998721">"Loto-lorea"</item>
+    <item msgid="5772220259409264724">"Gainbegiralea"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
