--- a/res/values-fr-rCA/arrays.xml
+++ b/res/values-fr-rCA/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Heure du coucher"</item>
-    <item msgid="4152450357280759894">"En conduite"</item>
-    <item msgid="7096549258219399423">"Immersif"</item>
-    <item msgid="2760716776980432977">"Gérée"</item>
-    <item msgid="601734478369121764">"Étoile"</item>
-    <item msgid="6243809315432780521">"Agenda"</item>
-    <item msgid="4913577903148415331">"Heure"</item>
-    <item msgid="3653377604690057780">"Théâtre"</item>
-    <item msgid="3843711267408385410">"Fleur"</item>
+    <item msgid="2750940760340557109">"Demi-lune"</item>
+    <item msgid="8513969636586738035">"Voiture"</item>
+    <item msgid="957392343846370509">"Esprit d\'une personne"</item>
+    <item msgid="6734164279667121348">"Agenda"</item>
+    <item msgid="4139559120353528558">"Horloge"</item>
+    <item msgid="5157711296814769020">"Parasol"</item>
+    <item msgid="6635328761318954115">"Tente"</item>
+    <item msgid="1711994778883392255">"Pellicule de film"</item>
+    <item msgid="9097658401859604879">"Manette de jeu"</item>
+    <item msgid="755931364157422565">"Haltères d\'entraînement"</item>
+    <item msgid="8894207806795738429">"Personne lançant le ballon"</item>
+    <item msgid="2274801572149555103">"Personne donnant un coup de pied"</item>
+    <item msgid="8795037201506843325">"Natation"</item>
+    <item msgid="3558421426169430451">"Personne faisant de la randonnée pédestre"</item>
+    <item msgid="7455070421232184932">"Golf"</item>
+    <item msgid="5841773092449126508">"Outils d\'atelier"</item>
+    <item msgid="4595330511709890409">"Mallette"</item>
+    <item msgid="8352738347856724389">"Étoile"</item>
+    <item msgid="7082783098151998721">"Fleur de lotus"</item>
+    <item msgid="5772220259409264724">"Superviseur"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
