--- a/res/values-hy/arrays.xml
+++ b/res/values-hy/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Քնելու ժամը"</item>
-    <item msgid="4152450357280759894">"Մեքենայով"</item>
-    <item msgid="7096549258219399423">"Ներկայության էֆեկտով"</item>
-    <item msgid="2760716776980432977">"Կառավարվող"</item>
-    <item msgid="601734478369121764">"Աստղ"</item>
-    <item msgid="6243809315432780521">"Օրացույց"</item>
-    <item msgid="4913577903148415331">"Ժամ"</item>
-    <item msgid="3653377604690057780">"Թատրոն"</item>
-    <item msgid="3843711267408385410">"Ծաղիկ"</item>
+    <item msgid="2750940760340557109">"Կիսալուսին"</item>
+    <item msgid="8513969636586738035">"Ավտոմեքենա"</item>
+    <item msgid="957392343846370509">"Մարդու միտքը"</item>
+    <item msgid="6734164279667121348">"Օրացույց"</item>
+    <item msgid="4139559120353528558">"Ժամացույց"</item>
+    <item msgid="5157711296814769020">"Լողափի հովանոց"</item>
+    <item msgid="6635328761318954115">"Վրան"</item>
+    <item msgid="1711994778883392255">"Ֆիլմի սյուժե"</item>
+    <item msgid="9097658401859604879">"Խաղային բարձակ"</item>
+    <item msgid="755931364157422565">"Հանտել"</item>
+    <item msgid="8894207806795738429">"Գնդակ նետող մարդ"</item>
+    <item msgid="2274801572149555103">"Ոտքով հարվածող մարդ"</item>
+    <item msgid="8795037201506843325">"Լող"</item>
+    <item msgid="3558421426169430451">"Քայլարշավի մասնակցող մարդ"</item>
+    <item msgid="7455070421232184932">"Գոլֆ"</item>
+    <item msgid="5841773092449126508">"Արհեստանոցի գործիքներ"</item>
+    <item msgid="4595330511709890409">"Թղթապանակ"</item>
+    <item msgid="8352738347856724389">"Աստղ"</item>
+    <item msgid="7082783098151998721">"Լոտոսի ծաղիկ"</item>
+    <item msgid="5772220259409264724">"Սուպերվայզեր"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
