--- a/res/values-it/arrays.xml
+++ b/res/values-it/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Riposo"</item>
-    <item msgid="4152450357280759894">"Alla guida"</item>
-    <item msgid="7096549258219399423">"Immersiva"</item>
-    <item msgid="2760716776980432977">"Gestita"</item>
-    <item msgid="601734478369121764">"Stella"</item>
-    <item msgid="6243809315432780521">"Calendario"</item>
-    <item msgid="4913577903148415331">"Tempo"</item>
-    <item msgid="3653377604690057780">"Teatro"</item>
-    <item msgid="3843711267408385410">"Fiore"</item>
+    <item msgid="2750940760340557109">"Mezza luna"</item>
+    <item msgid="8513969636586738035">"Auto"</item>
+    <item msgid="957392343846370509">"Mente di una persona"</item>
+    <item msgid="6734164279667121348">"Calendario"</item>
+    <item msgid="4139559120353528558">"Orologio"</item>
+    <item msgid="5157711296814769020">"Ombrellone da spiaggia"</item>
+    <item msgid="6635328761318954115">"Tenda"</item>
+    <item msgid="1711994778883392255">"Pellicola"</item>
+    <item msgid="9097658401859604879">"Controller di gioco"</item>
+    <item msgid="755931364157422565">"Manubrio da palestra"</item>
+    <item msgid="8894207806795738429">"Persona che lancia una palla"</item>
+    <item msgid="2274801572149555103">"Persona che tira un calcio"</item>
+    <item msgid="8795037201506843325">"Nuoto"</item>
+    <item msgid="3558421426169430451">"Persona che fa un\'escursione"</item>
+    <item msgid="7455070421232184932">"Golf"</item>
+    <item msgid="5841773092449126508">"Strumenti per il workshop"</item>
+    <item msgid="4595330511709890409">"Valigetta"</item>
+    <item msgid="8352738347856724389">"Stella"</item>
+    <item msgid="7082783098151998721">"Fiore di loto"</item>
+    <item msgid="5772220259409264724">"Supervisore"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
