--- a/res/values-ja/arrays.xml
+++ b/res/values-ja/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"就寝"</item>
-    <item msgid="4152450357280759894">"運転中"</item>
-    <item msgid="7096549258219399423">"臨場感"</item>
-    <item msgid="2760716776980432977">"管理対象"</item>
-    <item msgid="601734478369121764">"スター"</item>
-    <item msgid="6243809315432780521">"カレンダー"</item>
-    <item msgid="4913577903148415331">"時刻"</item>
-    <item msgid="3653377604690057780">"劇場"</item>
-    <item msgid="3843711267408385410">"花"</item>
+    <item msgid="2750940760340557109">"半月"</item>
+    <item msgid="8513969636586738035">"車"</item>
+    <item msgid="957392343846370509">"人の心"</item>
+    <item msgid="6734164279667121348">"カレンダー"</item>
+    <item msgid="4139559120353528558">"時計"</item>
+    <item msgid="5157711296814769020">"ビーチパラソル"</item>
+    <item msgid="6635328761318954115">"テント"</item>
+    <item msgid="1711994778883392255">"映画風"</item>
+    <item msgid="9097658401859604879">"ゲーム コントローラ"</item>
+    <item msgid="755931364157422565">"ジムのダンベル"</item>
+    <item msgid="8894207806795738429">"ボールを投げている人"</item>
+    <item msgid="2274801572149555103">"蹴っている人"</item>
+    <item msgid="8795037201506843325">"水泳"</item>
+    <item msgid="3558421426169430451">"ハイキングをしている人"</item>
+    <item msgid="7455070421232184932">"ゴルフ"</item>
+    <item msgid="5841773092449126508">"工具セット"</item>
+    <item msgid="4595330511709890409">"書類カバン"</item>
+    <item msgid="8352738347856724389">"星"</item>
+    <item msgid="7082783098151998721">"ハスの花"</item>
+    <item msgid="5772220259409264724">"スーパーバイザー"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
