--- a/res/values-ka/arrays.xml
+++ b/res/values-ka/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"ძილის დრო"</item>
-    <item msgid="4152450357280759894">"ავტომობილის მართვა"</item>
-    <item msgid="7096549258219399423">"იმერსიული"</item>
-    <item msgid="2760716776980432977">"მართული"</item>
-    <item msgid="601734478369121764">"ვარსკვლავი"</item>
-    <item msgid="6243809315432780521">"კალენდარი"</item>
-    <item msgid="4913577903148415331">"დრო"</item>
-    <item msgid="3653377604690057780">"თეატრი"</item>
-    <item msgid="3843711267408385410">"ყვავილი"</item>
+    <item msgid="2750940760340557109">"ნახევარმთვარე"</item>
+    <item msgid="8513969636586738035">"მანქანა"</item>
+    <item msgid="957392343846370509">"ადამიანის გონება"</item>
+    <item msgid="6734164279667121348">"კალენდარი"</item>
+    <item msgid="4139559120353528558">"საათი"</item>
+    <item msgid="5157711296814769020">"სანაპიროს ქოლგა"</item>
+    <item msgid="6635328761318954115">"კარავი"</item>
+    <item msgid="1711994778883392255">"კინოკადრი"</item>
+    <item msgid="9097658401859604879">"თამაშის კონტროლერი"</item>
+    <item msgid="755931364157422565">"სპორტული დარბაზის ჰანტელი"</item>
+    <item msgid="8894207806795738429">"ადამიანი, რომელიც ბურთს ისვრის"</item>
+    <item msgid="2274801572149555103">"ადამიანი, რომელიც არტყამს"</item>
+    <item msgid="8795037201506843325">"ცურვა"</item>
+    <item msgid="3558421426169430451">"მოლაშქრე"</item>
+    <item msgid="7455070421232184932">"გოლფი"</item>
+    <item msgid="5841773092449126508">"სახელოსნოს ხელსაწყოები"</item>
+    <item msgid="4595330511709890409">"ქეისი"</item>
+    <item msgid="8352738347856724389">"ვარსკვლავი"</item>
+    <item msgid="7082783098151998721">"ლოტოსის ყვავილი"</item>
+    <item msgid="5772220259409264724">"ზედამხედველი"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
