--- a/res/values-kn/arrays.xml
+++ b/res/values-kn/arrays.xml
@@ -133,7 +133,7 @@
   <string-array name="wifi_proxy_settings">
     <item msgid="4669222334822978847">"ಯಾವುದೂ ಇಲ್ಲ"</item>
     <item msgid="6242198071587397280">"ಹಸ್ತಚಾಲಿತ"</item>
-    <item msgid="464383874780058242">"ಪ್ರಾಕ್ಸಿ ಸ್ವಯಂ-ಕಾನ್ಫಿಗ್"</item>
+    <item msgid="464383874780058242">"ಪ್ರಾಕ್ಸಿ ಆಟೋ-ಕಾನ್ಫಿಗರೇಶನ್"</item>
   </string-array>
   <string-array name="apn_auth_entries">
     <item msgid="2900892411844440682">"ಯಾವುದೂ ಇಲ್ಲ"</item>
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"ಬೆಡ್‌ಟೈಮ್"</item>
-    <item msgid="4152450357280759894">"ಡ್ರೈವಿಂಗ್"</item>
-    <item msgid="7096549258219399423">"ತಲ್ಲೀನಗೊಳಿಸುವ"</item>
-    <item msgid="2760716776980432977">"ನಿರ್ವಹಿಸಿರುವುದು"</item>
-    <item msgid="601734478369121764">"ಸ್ಟಾರ್"</item>
-    <item msgid="6243809315432780521">"ಕ್ಯಾಲೆಂಡರ್"</item>
-    <item msgid="4913577903148415331">"ಸಮಯ"</item>
-    <item msgid="3653377604690057780">"ಥಿಯೇಟರ್"</item>
-    <item msgid="3843711267408385410">"ಹೂವು"</item>
+    <item msgid="2750940760340557109">"ಅರ್ಧಚಂದ್ರ"</item>
+    <item msgid="8513969636586738035">"ಕಾರು"</item>
+    <item msgid="957392343846370509">"ವ್ಯಕ್ತಿಯ ಮನಸ್ಸು"</item>
+    <item msgid="6734164279667121348">"Calendar"</item>
+    <item msgid="4139559120353528558">"ಗಡಿಯಾರ"</item>
+    <item msgid="5157711296814769020">"ಬೀಚ್ ಛತ್ರಿಗಳು"</item>
+    <item msgid="6635328761318954115">"ಟೆಂಟ್"</item>
+    <item msgid="1711994778883392255">"ಫಿಲಂ ರೀಲ್"</item>
+    <item msgid="9097658401859604879">"ಗೇಮ್ ಕಂಟ್ರೋಲರ್"</item>
+    <item msgid="755931364157422565">"ಜಿಮ್ ಡಂಬೆಲ್"</item>
+    <item msgid="8894207806795738429">"ವ್ಯಕ್ತಿ ಚೆಂಡನ್ನು ಎಸೆಯುತ್ತಿರುವುದು"</item>
+    <item msgid="2274801572149555103">"ವ್ಯಕ್ತಿಯು ಒದೆಯುತ್ತಿರುವುದು"</item>
+    <item msgid="8795037201506843325">"ಈಜು"</item>
+    <item msgid="3558421426169430451">"ವ್ಯಕ್ತಿಯು ಹೈಕಿಂಗ್ ಮಾಡುತ್ತಿರುವುದು"</item>
+    <item msgid="7455070421232184932">"ಗಾಲ್ಫ್"</item>
+    <item msgid="5841773092449126508">"ಕಾರ್ಯಾಗಾರದ ಟೂಲ್‌ಗಳು"</item>
+    <item msgid="4595330511709890409">"ಬ್ರೀಫ್‌ಕೇಸ್"</item>
+    <item msgid="8352738347856724389">"ನಕ್ಷತ್ರ"</item>
+    <item msgid="7082783098151998721">"ಕಮಲದ ಹೂವು"</item>
+    <item msgid="5772220259409264724">"ಮೇಲ್ವಿಚಾರಕ"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
