--- a/res/values-lv/arrays.xml
+++ b/res/values-lv/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Naktsmiers"</item>
-    <item msgid="4152450357280759894">"Braukšana pie stūres"</item>
-    <item msgid="7096549258219399423">"Iekļaujošs"</item>
-    <item msgid="2760716776980432977">"Pārvaldīts"</item>
-    <item msgid="601734478369121764">"Zvaigzne"</item>
-    <item msgid="6243809315432780521">"Kalendārs"</item>
-    <item msgid="4913577903148415331">"Laiks"</item>
-    <item msgid="3653377604690057780">"Kinoteātris"</item>
-    <item msgid="3843711267408385410">"Zieds"</item>
+    <item msgid="2750940760340557109">"Pusmēness"</item>
+    <item msgid="8513969636586738035">"Automašīna"</item>
+    <item msgid="957392343846370509">"Cilvēka prāts"</item>
+    <item msgid="6734164279667121348">"Kalendārs"</item>
+    <item msgid="4139559120353528558">"Pulkstenis"</item>
+    <item msgid="5157711296814769020">"Saulessargs"</item>
+    <item msgid="6635328761318954115">"Telts"</item>
+    <item msgid="1711994778883392255">"Filmas rullītis"</item>
+    <item msgid="9097658401859604879">"Spēles vadāmierīce"</item>
+    <item msgid="755931364157422565">"Sporta zāles hantele"</item>
+    <item msgid="8894207806795738429">"Cilvēks met bumbu"</item>
+    <item msgid="2274801572149555103">"Cilvēks sper"</item>
+    <item msgid="8795037201506843325">"Peldēšana"</item>
+    <item msgid="3558421426169430451">"Cilvēks pārgājienā"</item>
+    <item msgid="7455070421232184932">"Golfs"</item>
+    <item msgid="5841773092449126508">"Darbnīcas rīki"</item>
+    <item msgid="4595330511709890409">"Portfelis"</item>
+    <item msgid="8352738347856724389">"Zvaigznīte"</item>
+    <item msgid="7082783098151998721">"Lotosa zieds"</item>
+    <item msgid="5772220259409264724">"Uzraugs"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
