--- a/res/values-mk/arrays.xml
+++ b/res/values-mk/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Време за спиење"</item>
-    <item msgid="4152450357280759894">"Возење"</item>
-    <item msgid="7096549258219399423">"Реалистично"</item>
-    <item msgid="2760716776980432977">"Управувано"</item>
-    <item msgid="601734478369121764">"Ѕвезда"</item>
-    <item msgid="6243809315432780521">"Календар"</item>
-    <item msgid="4913577903148415331">"Време"</item>
-    <item msgid="3653377604690057780">"Театар"</item>
-    <item msgid="3843711267408385410">"Цвет"</item>
+    <item msgid="2750940760340557109">"Полумесечина"</item>
+    <item msgid="8513969636586738035">"Автомобил"</item>
+    <item msgid="957392343846370509">"Умот на лицето"</item>
+    <item msgid="6734164279667121348">"Календар"</item>
+    <item msgid="4139559120353528558">"Часовник"</item>
+    <item msgid="5157711296814769020">"Чадор за плажа"</item>
+    <item msgid="6635328761318954115">"Шатор"</item>
+    <item msgid="1711994778883392255">"Филмска лента"</item>
+    <item msgid="9097658401859604879">"Контролер за игри"</item>
+    <item msgid="755931364157422565">"Тег за теретана"</item>
+    <item msgid="8894207806795738429">"Лице кое фрла топка"</item>
+    <item msgid="2274801572149555103">"Лице кое клоца"</item>
+    <item msgid="8795037201506843325">"Пливање"</item>
+    <item msgid="3558421426169430451">"Лице кое планинари"</item>
+    <item msgid="7455070421232184932">"Голф"</item>
+    <item msgid="5841773092449126508">"Алати на работилницата"</item>
+    <item msgid="4595330511709890409">"Актовка"</item>
+    <item msgid="8352738347856724389">"Ѕвезда"</item>
+    <item msgid="7082783098151998721">"Цвет на лотос"</item>
+    <item msgid="5772220259409264724">"Надзорник"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
