--- a/res/values-mr/arrays.xml
+++ b/res/values-mr/arrays.xml
@@ -133,7 +133,7 @@
   <string-array name="wifi_proxy_settings">
     <item msgid="4669222334822978847">"काहीही नाही"</item>
     <item msgid="6242198071587397280">"मॅन्युअल"</item>
-    <item msgid="464383874780058242">"प्रॉक्सी ऑटो-कॉंफिग"</item>
+    <item msgid="464383874780058242">"प्रॉक्सी ऑटो-कॉन्फिगरेशन"</item>
   </string-array>
   <string-array name="apn_auth_entries">
     <item msgid="2900892411844440682">"काहीही नाही"</item>
@@ -411,9 +411,9 @@
     <item msgid="9080166583718385565">"०"</item>
   </string-array>
   <string-array name="wifi_metered_entries">
-    <item msgid="3237321077949659241">"आपोआप शोधा"</item>
-    <item msgid="3779092145391320375">"मर्यादित डेटा वापराचे नेटवर्क"</item>
-    <item msgid="2047166446768045816">"अमर्याद डेटा वापराचे नेटवर्क"</item>
+    <item msgid="3237321077949659241">"आपोआप डिटेक्ट करा"</item>
+    <item msgid="3779092145391320375">"मर्यादित डेटा वापराचे नेटवर्क म्हणून हाताळा"</item>
+    <item msgid="2047166446768045816">"अमर्याद डेटा वापराचे नेटवर्क म्हणून हाताळा"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
     <item msgid="91222619458919148">"रँडमाइझ केलेले MAC वापरा"</item>
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"बेडटाइम"</item>
-    <item msgid="4152450357280759894">"ड्रायव्हिंग"</item>
-    <item msgid="7096549258219399423">"इमर्सिव्ह"</item>
-    <item msgid="2760716776980432977">"व्यवस्थापित"</item>
-    <item msgid="601734478369121764">"तारा"</item>
-    <item msgid="6243809315432780521">"कॅलेंडर"</item>
-    <item msgid="4913577903148415331">"वेळ"</item>
-    <item msgid="3653377604690057780">"थिएटर"</item>
-    <item msgid="3843711267408385410">"फूल"</item>
+    <item msgid="2750940760340557109">"अर्धचंद्र"</item>
+    <item msgid="8513969636586738035">"कार"</item>
+    <item msgid="957392343846370509">"व्यक्तीचे मन"</item>
+    <item msgid="6734164279667121348">"कॅलेंडर"</item>
+    <item msgid="4139559120353528558">"घड्याळ"</item>
+    <item msgid="5157711296814769020">"समुद्रकिनाऱ्यावर वापरली जाणारी छत्री"</item>
+    <item msgid="6635328761318954115">"तंबू"</item>
+    <item msgid="1711994778883392255">"फिल्म रील"</item>
+    <item msgid="9097658401859604879">"गेम कंट्रोलर"</item>
+    <item msgid="755931364157422565">"व्यायामशाळेतील डंबेल"</item>
+    <item msgid="8894207806795738429">"बॉल फेकत असलेली व्यक्ती"</item>
+    <item msgid="2274801572149555103">"किक मारत असलेली व्यक्ती"</item>
+    <item msgid="8795037201506843325">"पोहणे"</item>
+    <item msgid="3558421426169430451">"हायकिंग करत असलेली व्यक्ती"</item>
+    <item msgid="7455070421232184932">"गोल्फ"</item>
+    <item msgid="5841773092449126508">"कारखान्यातील अवजारे"</item>
+    <item msgid="4595330511709890409">"ब्रीफकेस"</item>
+    <item msgid="8352738347856724389">"तारा"</item>
+    <item msgid="7082783098151998721">"कमळाचे फूल"</item>
+    <item msgid="5772220259409264724">"पर्यवेक्षक"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
