--- a/res/values-my/arrays.xml
+++ b/res/values-my/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"အိပ်ရာဝင်ချိန်"</item>
-    <item msgid="4152450357280759894">"ကားမောင်းခြင်း"</item>
-    <item msgid="7096549258219399423">"စီးမျောခြင်း"</item>
-    <item msgid="2760716776980432977">"စီမံပြီးဖြစ်သည်"</item>
-    <item msgid="601734478369121764">"ကြယ်"</item>
-    <item msgid="6243809315432780521">"ပြက္ခဒိန်"</item>
-    <item msgid="4913577903148415331">"အချိန်"</item>
-    <item msgid="3653377604690057780">"ပြဇာတ်ရုံ"</item>
-    <item msgid="3843711267408385410">"ပန်းပွင့်"</item>
+    <item msgid="2750940760340557109">"လခြမ်းတစ်ဝက်"</item>
+    <item msgid="8513969636586738035">"ကား"</item>
+    <item msgid="957392343846370509">"လူ့စိတ်"</item>
+    <item msgid="6734164279667121348">"ပြက္ခဒိန်"</item>
+    <item msgid="4139559120353528558">"နာရီ"</item>
+    <item msgid="5157711296814769020">"ကမ်းခြေထီး"</item>
+    <item msgid="6635328761318954115">"တဲ"</item>
+    <item msgid="1711994778883392255">"ဖလင်လိပ်"</item>
+    <item msgid="9097658401859604879">"ဂိမ်းထိန်းချုပ်ကိရိယာ"</item>
+    <item msgid="755931364157422565">"အားကစားရုံ ဝိတ်တုံး"</item>
+    <item msgid="8894207806795738429">"ဘောလုံးပစ်နေသူ"</item>
+    <item msgid="2274801572149555103">"ကန်နေသူ"</item>
+    <item msgid="8795037201506843325">"ရေကူးခြင်း"</item>
+    <item msgid="3558421426169430451">"တောင်တက်နေသူ"</item>
+    <item msgid="7455070421232184932">"ဂေါက်ရိုက်ခြင်း"</item>
+    <item msgid="5841773092449126508">"အလုပ်ရုံတူးလ်များ"</item>
+    <item msgid="4595330511709890409">"ရုံးသုံးလက်ဆွဲအိတ်"</item>
+    <item msgid="8352738347856724389">"ကြယ်"</item>
+    <item msgid="7082783098151998721">"ကြာပန်း"</item>
+    <item msgid="5772220259409264724">"ကြီးကြပ်ရေးမှူး"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
