--- a/res/values-pl/arrays.xml
+++ b/res/values-pl/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Pora snu"</item>
-    <item msgid="4152450357280759894">"Prowadzenie samochodu"</item>
-    <item msgid="7096549258219399423">"Wciągająca rozgrywka"</item>
-    <item msgid="2760716776980432977">"Zarządzane"</item>
-    <item msgid="601734478369121764">"Gwiazdka"</item>
-    <item msgid="6243809315432780521">"Kalendarz"</item>
-    <item msgid="4913577903148415331">"Godzina"</item>
-    <item msgid="3653377604690057780">"Teatr"</item>
-    <item msgid="3843711267408385410">"Kwiat"</item>
+    <item msgid="2750940760340557109">"Półksiężyc"</item>
+    <item msgid="8513969636586738035">"Samochód"</item>
+    <item msgid="957392343846370509">"Umysł osoby"</item>
+    <item msgid="6734164279667121348">"Kalendarz"</item>
+    <item msgid="4139559120353528558">"Zegar"</item>
+    <item msgid="5157711296814769020">"Parasol plażowy"</item>
+    <item msgid="6635328761318954115">"Namiot"</item>
+    <item msgid="1711994778883392255">"Taśma filmowa"</item>
+    <item msgid="9097658401859604879">"Kontroler do gier"</item>
+    <item msgid="755931364157422565">"Hantla gimnastyczna"</item>
+    <item msgid="8894207806795738429">"Osoba rzucająca piłkę"</item>
+    <item msgid="2274801572149555103">"Osoba kopiąca"</item>
+    <item msgid="8795037201506843325">"Pływanie"</item>
+    <item msgid="3558421426169430451">"Osoba wędrująca"</item>
+    <item msgid="7455070421232184932">"Golf"</item>
+    <item msgid="5841773092449126508">"Narzędzia warsztatowe"</item>
+    <item msgid="4595330511709890409">"Teczka"</item>
+    <item msgid="8352738347856724389">"Gwiazda"</item>
+    <item msgid="7082783098151998721">"Kwiat lotosu"</item>
+    <item msgid="5772220259409264724">"Kierownik"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
