--- a/res/values-sl/arrays.xml
+++ b/res/values-sl/arrays.xml
@@ -416,7 +416,7 @@
     <item msgid="2047166446768045816">"Obravnavaj kot: neomejen prenos podatkov"</item>
   </string-array>
   <string-array name="wifi_privacy_entries">
-    <item msgid="91222619458919148">"Uporabi naključno izbran naslov MAC"</item>
+    <item msgid="91222619458919148">"Uporabi naključni naslov MAC"</item>
     <item msgid="741680937828608749">"Uporabi naslov MAC naprave"</item>
   </string-array>
   <string-array name="wifi_dhcp_entries">
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Čas za spanje"</item>
-    <item msgid="4152450357280759894">"Vožnja"</item>
-    <item msgid="7096549258219399423">"Poglobljeno"</item>
-    <item msgid="2760716776980432977">"Upravljano"</item>
-    <item msgid="601734478369121764">"Zvezda"</item>
-    <item msgid="6243809315432780521">"Koledar"</item>
-    <item msgid="4913577903148415331">"Čas"</item>
-    <item msgid="3653377604690057780">"Gledališče"</item>
-    <item msgid="3843711267408385410">"Roža"</item>
+    <item msgid="2750940760340557109">"Polmesec"</item>
+    <item msgid="8513969636586738035">"Avtomobil"</item>
+    <item msgid="957392343846370509">"Misli osebe"</item>
+    <item msgid="6734164279667121348">"Koledar"</item>
+    <item msgid="4139559120353528558">"Ura"</item>
+    <item msgid="5157711296814769020">"Senčnik"</item>
+    <item msgid="6635328761318954115">"Šotor"</item>
+    <item msgid="1711994778883392255">"Filmski trak"</item>
+    <item msgid="9097658401859604879">"Krmilnik za igre"</item>
+    <item msgid="755931364157422565">"Telovadna utežna ročka"</item>
+    <item msgid="8894207806795738429">"Oseba meče žogo"</item>
+    <item msgid="2274801572149555103">"Oseba brca"</item>
+    <item msgid="8795037201506843325">"Plavanje"</item>
+    <item msgid="3558421426169430451">"Oseba na pohodu"</item>
+    <item msgid="7455070421232184932">"Golf"</item>
+    <item msgid="5841773092449126508">"Orodja v delavnici"</item>
+    <item msgid="4595330511709890409">"Aktovka"</item>
+    <item msgid="8352738347856724389">"Zvezdica"</item>
+    <item msgid="7082783098151998721">"Lotosov cvet"</item>
+    <item msgid="5772220259409264724">"Nadzornik"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
