--- a/res/values-sw/arrays.xml
+++ b/res/values-sw/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Wakati wa kulala"</item>
-    <item msgid="4152450357280759894">"Kuendesha gari"</item>
-    <item msgid="7096549258219399423">"Kwa kina"</item>
-    <item msgid="2760716776980432977">"Inadhibitiwa"</item>
-    <item msgid="601734478369121764">"Nyota"</item>
-    <item msgid="6243809315432780521">"Kalenda"</item>
-    <item msgid="4913577903148415331">"Muda"</item>
-    <item msgid="3653377604690057780">"Ukumbi"</item>
-    <item msgid="3843711267408385410">"Ua"</item>
+    <item msgid="2750940760340557109">"Nusu-mwezi"</item>
+    <item msgid="8513969636586738035">"Gari"</item>
+    <item msgid="957392343846370509">"Mawazo ya mtu"</item>
+    <item msgid="6734164279667121348">"Kalenda"</item>
+    <item msgid="4139559120353528558">"Saa"</item>
+    <item msgid="5157711296814769020">"Mwamvuli wa ufukweni"</item>
+    <item msgid="6635328761318954115">"Hema"</item>
+    <item msgid="1711994778883392255">"Mkanda wa filamu"</item>
+    <item msgid="9097658401859604879">"Kidhibiti cha mchezo"</item>
+    <item msgid="755931364157422565">"Vyuma vya mazoezi"</item>
+    <item msgid="8894207806795738429">"Mtu anayerusha mpira"</item>
+    <item msgid="2274801572149555103">"Mtu anayepiga teke"</item>
+    <item msgid="8795037201506843325">"Kuogelea"</item>
+    <item msgid="3558421426169430451">"Mtu anayekwea mlima"</item>
+    <item msgid="7455070421232184932">"Gofu"</item>
+    <item msgid="5841773092449126508">"Zana za karakana"</item>
+    <item msgid="4595330511709890409">"Mkoba"</item>
+    <item msgid="8352738347856724389">"Nyota"</item>
+    <item msgid="7082783098151998721">"Ua la yungiyungi"</item>
+    <item msgid="5772220259409264724">"Msimamizi"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
