--- a/res/values-ta/arrays.xml
+++ b/res/values-ta/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"உறக்கநேரம்"</item>
-    <item msgid="4152450357280759894">"வாகனம் ஓட்டுதல்"</item>
-    <item msgid="7096549258219399423">"ஈடுபடவைப்பவை"</item>
-    <item msgid="2760716776980432977">"நிர்வகிக்கப்பட்டது"</item>
-    <item msgid="601734478369121764">"ஸ்டார்"</item>
-    <item msgid="6243809315432780521">"கேலெண்டர்"</item>
-    <item msgid="4913577903148415331">"நேரம்"</item>
-    <item msgid="3653377604690057780">"திரையரங்கம்"</item>
-    <item msgid="3843711267408385410">"பூ"</item>
+    <item msgid="2750940760340557109">"பாதி நிலவு"</item>
+    <item msgid="8513969636586738035">"கார்"</item>
+    <item msgid="957392343846370509">"மனித மூளை"</item>
+    <item msgid="6734164279667121348">"கேலெண்டர்"</item>
+    <item msgid="4139559120353528558">"கடிகாரம்"</item>
+    <item msgid="5157711296814769020">"பீச் குடை"</item>
+    <item msgid="6635328761318954115">"கூடாரம்"</item>
+    <item msgid="1711994778883392255">"திரைப்பட ரீல்"</item>
+    <item msgid="9097658401859604879">"கேம் கண்ட்ரோலர்"</item>
+    <item msgid="755931364157422565">"ஜிம் டம்பெல்"</item>
+    <item msgid="8894207806795738429">"ஒரு நபர் பந்து வீசுகிறார்"</item>
+    <item msgid="2274801572149555103">"ஒரு நபர் உதைக்கிறார்"</item>
+    <item msgid="8795037201506843325">"நீச்சல்"</item>
+    <item msgid="3558421426169430451">"ஒரு நபர் நெடுந்தூரம் நடக்கிறார்"</item>
+    <item msgid="7455070421232184932">"கோல்ஃப்"</item>
+    <item msgid="5841773092449126508">"வொர்க்‌ஷாப் கருவிகள்"</item>
+    <item msgid="4595330511709890409">"குறும்பெட்டி"</item>
+    <item msgid="8352738347856724389">"நட்சத்திரம்"</item>
+    <item msgid="7082783098151998721">"தாமரை பூ"</item>
+    <item msgid="5772220259409264724">"மேற்பார்வையாளர்"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
