--- a/res/values-zh-rHK/arrays.xml
+++ b/res/values-zh-rHK/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"睡眠時間"</item>
-    <item msgid="4152450357280759894">"駕駛"</item>
-    <item msgid="7096549258219399423">"身歷其境"</item>
-    <item msgid="2760716776980432977">"受管理"</item>
-    <item msgid="601734478369121764">"星星"</item>
-    <item msgid="6243809315432780521">"日曆"</item>
-    <item msgid="4913577903148415331">"時間"</item>
-    <item msgid="3653377604690057780">"劇院"</item>
-    <item msgid="3843711267408385410">"花"</item>
+    <item msgid="2750940760340557109">"半月"</item>
+    <item msgid="8513969636586738035">"汽車"</item>
+    <item msgid="957392343846370509">"人的頭腦"</item>
+    <item msgid="6734164279667121348">"日曆"</item>
+    <item msgid="4139559120353528558">"時鐘"</item>
+    <item msgid="5157711296814769020">"沙灘傘"</item>
+    <item msgid="6635328761318954115">"帳篷"</item>
+    <item msgid="1711994778883392255">"菲林卷軸"</item>
+    <item msgid="9097658401859604879">"遊戲控制器"</item>
+    <item msgid="755931364157422565">"健身啞鈴"</item>
+    <item msgid="8894207806795738429">"擲球的人"</item>
+    <item msgid="2274801572149555103">"踢腿的人"</item>
+    <item msgid="8795037201506843325">"游泳"</item>
+    <item msgid="3558421426169430451">"遠足的人"</item>
+    <item msgid="7455070421232184932">"高爾夫球"</item>
+    <item msgid="5841773092449126508">"工作坊工具"</item>
+    <item msgid="4595330511709890409">"公事包"</item>
+    <item msgid="8352738347856724389">"星形"</item>
+    <item msgid="7082783098151998721">"蓮花"</item>
+    <item msgid="5772220259409264724">"主管"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
