--- a/res/values-zu/arrays.xml
+++ b/res/values-zu/arrays.xml
@@ -499,15 +499,26 @@
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
   <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="6386593780953863398">"Isikhathi sokulala"</item>
-    <item msgid="4152450357280759894">"Ukushayela"</item>
-    <item msgid="7096549258219399423">"Okugxilile"</item>
-    <item msgid="2760716776980432977">"Kuphethwe"</item>
-    <item msgid="601734478369121764">"Inkanyezi"</item>
-    <item msgid="6243809315432780521">"Ikhalenda"</item>
-    <item msgid="4913577903148415331">"Isikhathi"</item>
-    <item msgid="3653377604690057780">"Itiyetha"</item>
-    <item msgid="3843711267408385410">"Imbali"</item>
+    <item msgid="2750940760340557109">"Inyanga ewuhhafu"</item>
+    <item msgid="8513969636586738035">"Imoto"</item>
+    <item msgid="957392343846370509">"Ingqondo yomuntu"</item>
+    <item msgid="6734164279667121348">"Ikhalenda"</item>
+    <item msgid="4139559120353528558">"Iwashi"</item>
+    <item msgid="5157711296814769020">"Isambulela sasebhishi"</item>
+    <item msgid="6635328761318954115">"Itende"</item>
+    <item msgid="1711994778883392255">"Ireel yefilimu"</item>
+    <item msgid="9097658401859604879">"Isilawuli somdlalo"</item>
+    <item msgid="755931364157422565">"Izinsimbi zasejimini"</item>
+    <item msgid="8894207806795738429">"Umuntu ophonsa ibhola"</item>
+    <item msgid="2274801572149555103">"Umuntu okhahlelayo"</item>
+    <item msgid="8795037201506843325">"Ukubhukuda"</item>
+    <item msgid="3558421426169430451">"Umuntu oqhwala intaba"</item>
+    <item msgid="7455070421232184932">"Igalufu"</item>
+    <item msgid="5841773092449126508">"Amathuluzi asendaweni yomsebenzi"</item>
+    <item msgid="4595330511709890409">"Isikhwama"</item>
+    <item msgid="8352738347856724389">"Inkanyezi"</item>
+    <item msgid="7082783098151998721">"Imbali yelotus"</item>
+    <item msgid="5772220259409264724">"Induna"</item>
   </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
