Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I3485a70b975502e2ebf7672d9a79c6a9e1e7ca09

--- a/res/values-kn/arrays.xml
+++ b/res/values-kn/arrays.xml
@@ -126,7 +126,7 @@
   <string-array name="wifi_proxy_settings">
     <item msgid="4669222334822978847">"ಯಾವುದೂ ಇಲ್ಲ"</item>
     <item msgid="6242198071587397280">"ಹಸ್ತಚಾಲಿತ"</item>
-    <item msgid="464383874780058242">"ಪ್ರಾಕ್ಸಿ ಸ್ವಯಂ-ಕಾನ್ಫಿಗ್"</item>
+    <item msgid="464383874780058242">"ಪ್ರಾಕ್ಸಿ ಆಟೋ-ಕಾನ್ಫಿಗರೇಶನ್"</item>
   </string-array>
   <string-array name="apn_auth_entries">
     <item msgid="2900892411844440682">"ಯಾವುದೂ ಇಲ್ಲ"</item>
