Update PreferenceCategory style in battery usage.
- Remove 2 unexpected padding caused by empty title.
https://screenshot.googleplex.com/8Da8eyezLHnwpkj
https://screenshot.googleplex.com/cs6gRpNkWxDjRER

Bug: 359429437
Test: visual
Flag: EXEMPT bug fix
Change-Id: I055edf8f27a6c646df5c0c8fddfd849282334333

--- a/res/xml/power_usage_advanced.xml
+++ b/res/xml/power_usage_advanced.xml
@@ -23,6 +23,7 @@
 
     <PreferenceCategory
         android:key="battery_tips_category"
+        android:layout="@layout/preference_category_no_label"
         settings:controller=
             "com.android.settings.fuelgauge.batteryusage.BatteryTipsController"
         settings:isPreferenceVisible="false">
@@ -62,6 +63,7 @@
 
         <PreferenceCategory
             android:key="app_list"
+            android:layout="@layout/preference_category_no_label"
             settings:isPreferenceVisible="false" />
 
         <com.android.settingslib.widget.FooterPreference
