Don't read the +N test of CircularIconsPreference
The description of the segment is already "App 1, App 2, and x more can interrupt", from its text. If the icons don't fit, there's a "+N" at the end. Accessibility services reading this is confusing, especially because the icons that don't fit are not the same as the names that don't fit, so you could get something like "App 1, App 2, and 9 more can interrupt, plus 4".

The whole circular-icons section is irrelevant for a11y so we just mark the container as "noHideDescendants" to save Talkback some work.

Fixes: 359837977
Test: Manual with Talkback
Flag: android.app.modes_ui
Change-Id: I346abcc94e25ef60c5e91f77b8e13f38ade39c71

--- a/res/layout/preference_circular_icons.xml
+++ b/res/layout/preference_circular_icons.xml
@@ -61,6 +61,7 @@
         <!-- Circular icons (32dp) will be ImageViews under this LinearLayout -->
         <LinearLayout
             android:id="@+id/circles_container"
+            android:importantForAccessibility="noHideDescendants"
             android:orientation="horizontal"
             android:gravity="center_vertical"
             android:layout_width="match_parent"
