Flip the INTERRUPTION_FILTER_ALL switch
Instead of "Limit what can notify you", title is now "Allow all notifications" and its behavior is reversed (switch ON hides people/apps/other).

Fixes: 360359116
Test: atest InterruptionFilterPreferenceControllerTest + manual
Flag: android.app.modes_ui
Change-Id: Ibb5334889662ec3aa778cd74c51506718ab0ebc7

--- a/res/xml/modes_rule_settings.xml
+++ b/res/xml/modes_rule_settings.xml
@@ -59,8 +59,8 @@
             android:key="modes_filters">
 
         <SwitchPreferenceCompat
-            android:key="allow_filtering"
-            android:title="@string/mode_notification_filter_title"/>
+            android:key="allow_all"
+            android:title="@string/zen_mode_allow_all_notifications"/>
 
         <com.android.settings.notification.modes.CircularIconsPreference
             android:key="zen_mode_people"
