Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I0b3b3199ff8c32bc580a51c99e41270623a2ed3d

--- a/res/values-tr/arrays.xml
+++ b/res/values-tr/arrays.xml
@@ -498,28 +498,9 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-  <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="2750940760340557109">"Yarım ay"</item>
-    <item msgid="8513969636586738035">"Araba"</item>
-    <item msgid="957392343846370509">"İnsan aklı"</item>
-    <item msgid="6734164279667121348">"Takvim"</item>
-    <item msgid="4139559120353528558">"Saat"</item>
-    <item msgid="5157711296814769020">"Plaj şemsiyesi"</item>
-    <item msgid="6635328761318954115">"Çadır"</item>
-    <item msgid="1711994778883392255">"Film rulosu"</item>
-    <item msgid="9097658401859604879">"Oyun kumandası"</item>
-    <item msgid="755931364157422565">"Spor salonu dambılı"</item>
-    <item msgid="8894207806795738429">"Top atan bir kişi"</item>
-    <item msgid="2274801572149555103">"Tekme atan bir kişi"</item>
-    <item msgid="8795037201506843325">"Yüzme"</item>
-    <item msgid="3558421426169430451">"Doğa yürüyüşü yapan bir kişi"</item>
-    <item msgid="7455070421232184932">"Golf"</item>
-    <item msgid="5841773092449126508">"Atölye araçları"</item>
-    <item msgid="4595330511709890409">"Evrak çantası"</item>
-    <item msgid="8352738347856724389">"Yıldız"</item>
-    <item msgid="7082783098151998721">"Nilüfer çiçeği"</item>
-    <item msgid="5772220259409264724">"Şef"</item>
-  </string-array>
+    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
