--- a/res/values-es-rUS/arrays.xml
+++ b/res/values-es-rUS/arrays.xml
@@ -498,28 +498,9 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-  <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="2750940760340557109">"Media luna"</item>
-    <item msgid="8513969636586738035">"Auto"</item>
-    <item msgid="957392343846370509">"Mente de una persona"</item>
-    <item msgid="6734164279667121348">"Calendario"</item>
-    <item msgid="4139559120353528558">"Reloj"</item>
-    <item msgid="5157711296814769020">"Sombrilla"</item>
-    <item msgid="6635328761318954115">"Tienda"</item>
-    <item msgid="1711994778883392255">"Rollo de película"</item>
-    <item msgid="9097658401859604879">"Control de juegos"</item>
-    <item msgid="755931364157422565">"Mancuerna"</item>
-    <item msgid="8894207806795738429">"Persona arrojando una pelota"</item>
-    <item msgid="2274801572149555103">"Persona pateando"</item>
-    <item msgid="8795037201506843325">"Natación"</item>
-    <item msgid="3558421426169430451">"Persona caminando"</item>
-    <item msgid="7455070421232184932">"Golf"</item>
-    <item msgid="5841773092449126508">"Herramientas de taller"</item>
-    <item msgid="4595330511709890409">"Maletín"</item>
-    <item msgid="8352738347856724389">"Destacado"</item>
-    <item msgid="7082783098151998721">"Flor de loto"</item>
-    <item msgid="5772220259409264724">"Supervisor"</item>
-  </string-array>
+    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
