--- a/res/values-km/arrays.xml
+++ b/res/values-km/arrays.xml
@@ -498,28 +498,9 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-  <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="2750940760340557109">"ព្រះ​ចន្ទមួយចំហៀង"</item>
-    <item msgid="8513969636586738035">"រថយន្ត"</item>
-    <item msgid="957392343846370509">"ចិត្តរបស់មនុស្ស"</item>
-    <item msgid="6734164279667121348">"ប្រតិទិន"</item>
-    <item msgid="4139559120353528558">"នាឡិកា"</item>
-    <item msgid="5157711296814769020">"ឆត្រនៅតាមឆ្នេរ"</item>
-    <item msgid="6635328761318954115">"តង់"</item>
-    <item msgid="1711994778883392255">"ដុំហ្វីលភាពយន្ត"</item>
-    <item msgid="9097658401859604879">"ឧបករណ៍បញ្ជាហ្គេម"</item>
-    <item msgid="755931364157422565">"ដុំដែកនៅកន្លែងហាត់ប្រាណ"</item>
-    <item msgid="8894207806795738429">"មនុស្សកំពុងគប់បាល់"</item>
-    <item msgid="2274801572149555103">"មនុស្សកំពុងធាក់"</item>
-    <item msgid="8795037201506843325">"ការហែលទឹក"</item>
-    <item msgid="3558421426169430451">"មនុស្សកំពុងដើរកាត់​ព្រៃភ្នំ"</item>
-    <item msgid="7455070421232184932">"កូនហ្គោល"</item>
-    <item msgid="5841773092449126508">"ឧបករណ៍រោងជាង"</item>
-    <item msgid="4595330511709890409">"កាបូបធ្វើការ"</item>
-    <item msgid="8352738347856724389">"ផ្កាយ"</item>
-    <item msgid="7082783098151998721">"ផ្កា​ឈូក"</item>
-    <item msgid="5772220259409264724">"អ្នកគ្រប់គ្រង"</item>
-  </string-array>
+    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
