--- a/res/values-mr/arrays.xml
+++ b/res/values-mr/arrays.xml
@@ -498,28 +498,9 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-  <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="2750940760340557109">"अर्धचंद्र"</item>
-    <item msgid="8513969636586738035">"कार"</item>
-    <item msgid="957392343846370509">"व्यक्तीचे मन"</item>
-    <item msgid="6734164279667121348">"कॅलेंडर"</item>
-    <item msgid="4139559120353528558">"घड्याळ"</item>
-    <item msgid="5157711296814769020">"समुद्रकिनाऱ्यावर वापरली जाणारी छत्री"</item>
-    <item msgid="6635328761318954115">"तंबू"</item>
-    <item msgid="1711994778883392255">"फिल्म रील"</item>
-    <item msgid="9097658401859604879">"गेम कंट्रोलर"</item>
-    <item msgid="755931364157422565">"व्यायामशाळेतील डंबेल"</item>
-    <item msgid="8894207806795738429">"बॉल फेकत असलेली व्यक्ती"</item>
-    <item msgid="2274801572149555103">"किक मारत असलेली व्यक्ती"</item>
-    <item msgid="8795037201506843325">"पोहणे"</item>
-    <item msgid="3558421426169430451">"हायकिंग करत असलेली व्यक्ती"</item>
-    <item msgid="7455070421232184932">"गोल्फ"</item>
-    <item msgid="5841773092449126508">"कारखान्यातील अवजारे"</item>
-    <item msgid="4595330511709890409">"ब्रीफकेस"</item>
-    <item msgid="8352738347856724389">"तारा"</item>
-    <item msgid="7082783098151998721">"कमळाचे फूल"</item>
-    <item msgid="5772220259409264724">"पर्यवेक्षक"</item>
-  </string-array>
+    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
