--- a/res/values-pt-rPT/arrays.xml
+++ b/res/values-pt-rPT/arrays.xml
@@ -498,28 +498,9 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-  <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="2750940760340557109">"Meia-lua"</item>
-    <item msgid="8513969636586738035">"Carro"</item>
-    <item msgid="957392343846370509">"A mente da pessoa"</item>
-    <item msgid="6734164279667121348">"Calendário"</item>
-    <item msgid="4139559120353528558">"Relógio"</item>
-    <item msgid="5157711296814769020">"Guarda-sol"</item>
-    <item msgid="6635328761318954115">"Tenda"</item>
-    <item msgid="1711994778883392255">"Bobina de filme"</item>
-    <item msgid="9097658401859604879">"Comando de jogos"</item>
-    <item msgid="755931364157422565">"Haltere de ginásio"</item>
-    <item msgid="8894207806795738429">"Pessoa a atirar uma bola"</item>
-    <item msgid="2274801572149555103">"Pessoa a pontapear"</item>
-    <item msgid="8795037201506843325">"Natação"</item>
-    <item msgid="3558421426169430451">"Pessoa a caminhar"</item>
-    <item msgid="7455070421232184932">"Golfe"</item>
-    <item msgid="5841773092449126508">"Ferramentas de oficina"</item>
-    <item msgid="4595330511709890409">"Pasta de trabalho"</item>
-    <item msgid="8352738347856724389">"Estrela"</item>
-    <item msgid="7082783098151998721">"Flor de lótus"</item>
-    <item msgid="5772220259409264724">"Supervisor"</item>
-  </string-array>
+    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
