--- a/res/values-vi/arrays.xml
+++ b/res/values-vi/arrays.xml
@@ -498,28 +498,45 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-  <string-array name="zen_mode_icon_options_descriptions">
-    <item msgid="2750940760340557109">"Nửa vầng trăng"</item>
-    <item msgid="8513969636586738035">"Ô tô"</item>
-    <item msgid="957392343846370509">"Suy nghĩ của một người"</item>
-    <item msgid="6734164279667121348">"Lịch"</item>
-    <item msgid="4139559120353528558">"Đồng hồ"</item>
-    <item msgid="5157711296814769020">"Dù che trên bãi biển"</item>
-    <item msgid="6635328761318954115">"Lều"</item>
-    <item msgid="1711994778883392255">"Cuộn phim"</item>
-    <item msgid="9097658401859604879">"Tay điều khiển trò chơi"</item>
-    <item msgid="755931364157422565">"Tạ tập thể dục"</item>
-    <item msgid="8894207806795738429">"Người đang ném bóng"</item>
-    <item msgid="2274801572149555103">"Người đang đá"</item>
-    <item msgid="8795037201506843325">"Bơi"</item>
-    <item msgid="3558421426169430451">"Người đi bộ đường dài"</item>
-    <item msgid="7455070421232184932">"Gôn"</item>
-    <item msgid="5841773092449126508">"Công cụ trong xưởng"</item>
-    <item msgid="4595330511709890409">"Cặp tài liệu"</item>
-    <item msgid="8352738347856724389">"Ngôi sao"</item>
-    <item msgid="7082783098151998721">"Hoa sen"</item>
-    <item msgid="5772220259409264724">"Người giám sát"</item>
-  </string-array>
+    <!-- no translation found for zen_mode_icon_options_descriptions:0 (1216815120972438676) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:1 (184985872234062767) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:2 (9189550412466785530) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:3 (2142527562511049422) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:4 (2548100558260478605) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:5 (2270003903304578284) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:6 (4793496619091161864) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:7 (355583383827414575) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:8 (8001358013148723500) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:10 (1122491217891679043) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:11 (5825437763616894959) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:12 (7343381753556126903) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:13 (7785234702090595) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:14 (8551370809943066311) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:15 (6613149523957360458) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:16 (9183052350354526560) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:17 (1589939022701519138) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:18 (4861295101659969850) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:19 (6817957885445446596) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:20 (5923605807513411961) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:21 (7669095367618738070) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:22 (2852435596978961693) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:23 (7021313931065738980) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:24 (6988657977896749103) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:25 (7175373369979188147) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:26 (8654852711800563054) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:27 (165142533839452848) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:28 (5359765481365992847) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:29 (5010405583912314582) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:30 (8939998598599064900) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:31 (3379605903308731893) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:35 (5767782819651505460) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:36 (4368451291862729334) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:37 (2613199102208419986) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:38 (3022279986430275040) -->
+    <!-- no translation found for zen_mode_icon_options_descriptions:39 (5421089790869483206) -->
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
