Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I6f459f9993b33465157c35a95112acf56241a09f

--- a/res/values-ka/arrays.xml
+++ b/res/values-ka/arrays.xml
@@ -498,9 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"ქეისი"</item>
+    <item msgid="184985872234062767">"კლასიკური შენობა"</item>
+    <item msgid="9189550412466785530">"აპარტამენტების შენობა"</item>
+    <item msgid="2142527562511049422">"საუბრის ბუშტი"</item>
+    <item msgid="2548100558260478605">"ადამიანების ჯგუფი"</item>
+    <item msgid="2270003903304578284">"ნათურა"</item>
+    <item msgid="4793496619091161864">"კალენდარი"</item>
+    <item msgid="355583383827414575">"მორბენალი ადამიანი"</item>
+    <item msgid="8001358013148723500">"გოლფი"</item>
+    <item msgid="755931364157422565">"სპორტული დარბაზის ჰანტელი"</item>
+    <item msgid="1122491217891679043">"ცურვა"</item>
+    <item msgid="5825437763616894959">"მოლაშქრე"</item>
+    <item msgid="7343381753556126903">"ადამიანი, რომელიც ბურთს ისვრის"</item>
+    <item msgid="7785234702090595">"ადამიანი, რომელიც არტყამს"</item>
+    <item msgid="8551370809943066311">"თამაშის კონტროლერი"</item>
+    <item msgid="6613149523957360458">"მხატვრის ფერთა პალიტრა"</item>
+    <item msgid="9183052350354526560">"ფიფქი"</item>
+    <item msgid="1589939022701519138">"სანაპიროს ქოლგა"</item>
+    <item msgid="4861295101659969850">"სახელოსნოს ხელსაწყოები"</item>
+    <item msgid="6817957885445446596">"კარავი"</item>
+    <item msgid="5923605807513411961">"კინოკადრი"</item>
+    <item msgid="7669095367618738070">"დაჯავშნა"</item>
+    <item msgid="2852435596978961693">"ლოტოსის ყვავილი"</item>
+    <item msgid="7021313931065738980">"ადამიანის გონება"</item>
+    <item msgid="6988657977896749103">"ყურსასმენები"</item>
+    <item msgid="7175373369979188147">"ტელევიზორი"</item>
+    <item msgid="8654852711800563054">"მატარებელი"</item>
+    <item msgid="165142533839452848">"მანქანა"</item>
+    <item msgid="5359765481365992847">"კრუასანი"</item>
+    <item msgid="5010405583912314582">"დანა-ჩანგალი"</item>
+    <item msgid="8939998598599064900">"საყიდლების კალათა"</item>
+    <item msgid="3379605903308731893">"ბავშვი"</item>
+    <item msgid="7808668968550293112">"ცხოველის თათი"</item>
+    <item msgid="1000692647524056504">"ვარსკვლავის ბეჯი"</item>
+    <item msgid="8270261073421676502">"ორი ადამიანი"</item>
+    <item msgid="5767782819651505460">"ვარსკვლავი"</item>
+    <item msgid="4368451291862729334">"გული"</item>
+    <item msgid="2613199102208419986">"სახლი"</item>
+    <item msgid="3022279986430275040">"ნახევარმთვარე"</item>
+    <item msgid="5421089790869483206">"საათი"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
