--- a/res/values-my/arrays.xml
+++ b/res/values-my/arrays.xml
@@ -498,9 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"ရုံးသုံးလက်ဆွဲအိတ်"</item>
+    <item msgid="184985872234062767">"ရှေးဟောင်း အဆောက်အအုံ"</item>
+    <item msgid="9189550412466785530">"တိုက်ခန်း"</item>
+    <item msgid="2142527562511049422">"စကားပြော ပူဖောင်းကွက်"</item>
+    <item msgid="2548100558260478605">"လူအုပ်စု"</item>
+    <item msgid="2270003903304578284">"မီးလုံး"</item>
+    <item msgid="4793496619091161864">"ပြက္ခဒိန်"</item>
+    <item msgid="355583383827414575">"ပြေးနေသူ"</item>
+    <item msgid="8001358013148723500">"ဂေါက်ရိုက်ခြင်း"</item>
+    <item msgid="755931364157422565">"အားကစားရုံ ဝိတ်တုံး"</item>
+    <item msgid="1122491217891679043">"ရေကူးခြင်း"</item>
+    <item msgid="5825437763616894959">"တောင်တက်နေသူ"</item>
+    <item msgid="7343381753556126903">"ဘောလုံးပစ်နေသူ"</item>
+    <item msgid="7785234702090595">"ကန်နေသူ"</item>
+    <item msgid="8551370809943066311">"ဂိမ်းထိန်းချုပ်ကိရိယာ"</item>
+    <item msgid="6613149523957360458">"ပန်းချီပညာရှင် အရောင်အစုအဖွဲ့"</item>
+    <item msgid="9183052350354526560">"နှင်းပွင့်"</item>
+    <item msgid="1589939022701519138">"ကမ်းခြေထီး"</item>
+    <item msgid="4861295101659969850">"အလုပ်ရုံတူးလ်များ"</item>
+    <item msgid="6817957885445446596">"တဲ"</item>
+    <item msgid="5923605807513411961">"ဖလင်လိပ်"</item>
+    <item msgid="7669095367618738070">"စာအုပ်"</item>
+    <item msgid="2852435596978961693">"ကြာပန်း"</item>
+    <item msgid="7021313931065738980">"လူ့စိတ်"</item>
+    <item msgid="6988657977896749103">"နားကြပ်"</item>
+    <item msgid="7175373369979188147">"TV"</item>
+    <item msgid="8654852711800563054">"ရထား"</item>
+    <item msgid="165142533839452848">"ကား"</item>
+    <item msgid="5359765481365992847">"လခြမ်းကွေး ပေါင်မုန့်"</item>
+    <item msgid="5010405583912314582">"ဓား၊ ခက်ရင်း"</item>
+    <item msgid="8939998598599064900">"ဈေးခြင်းတောင်း"</item>
+    <item msgid="3379605903308731893">"ကလေး"</item>
+    <item msgid="7808668968550293112">"တိရစ္ဆာန်ဖဝါး"</item>
+    <item msgid="1000692647524056504">"ကြယ်ပွင့်တံဆိပ်"</item>
+    <item msgid="8270261073421676502">"လူနှစ်ဦး"</item>
+    <item msgid="5767782819651505460">"ကြယ်"</item>
+    <item msgid="4368451291862729334">"အသည်းပုံ"</item>
+    <item msgid="2613199102208419986">"အိမ်"</item>
+    <item msgid="3022279986430275040">"လခြမ်းတစ်ဝက်"</item>
+    <item msgid="5421089790869483206">"နာရီ"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
