--- a/res/values-sl/arrays.xml
+++ b/res/values-sl/arrays.xml
@@ -498,9 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"Aktovka"</item>
+    <item msgid="184985872234062767">"Klasična stavba"</item>
+    <item msgid="9189550412466785530">"Stanovanjski objekt"</item>
+    <item msgid="2142527562511049422">"Oblaček z govorom"</item>
+    <item msgid="2548100558260478605">"Skupina oseb"</item>
+    <item msgid="2270003903304578284">"Žarnica"</item>
+    <item msgid="4793496619091161864">"Koledar"</item>
+    <item msgid="355583383827414575">"Oseba teče"</item>
+    <item msgid="8001358013148723500">"Golf"</item>
+    <item msgid="755931364157422565">"Telovadna utežna ročka"</item>
+    <item msgid="1122491217891679043">"Plavanje"</item>
+    <item msgid="5825437763616894959">"Oseba na pohodu"</item>
+    <item msgid="7343381753556126903">"Oseba meče žogo"</item>
+    <item msgid="7785234702090595">"Oseba brca"</item>
+    <item msgid="8551370809943066311">"Krmilnik za igre"</item>
+    <item msgid="6613149523957360458">"Barvna paleta umetnika"</item>
+    <item msgid="9183052350354526560">"Snežinka"</item>
+    <item msgid="1589939022701519138">"Senčnik"</item>
+    <item msgid="4861295101659969850">"Orodja v delavnici"</item>
+    <item msgid="6817957885445446596">"Šotor"</item>
+    <item msgid="5923605807513411961">"Filmski trak"</item>
+    <item msgid="7669095367618738070">"Knjiga"</item>
+    <item msgid="2852435596978961693">"Lotosov cvet"</item>
+    <item msgid="7021313931065738980">"Misli osebe"</item>
+    <item msgid="6988657977896749103">"Slušalke"</item>
+    <item msgid="7175373369979188147">"Televizor"</item>
+    <item msgid="8654852711800563054">"Vlak"</item>
+    <item msgid="165142533839452848">"Avtomobil"</item>
+    <item msgid="5359765481365992847">"Rogljiček"</item>
+    <item msgid="5010405583912314582">"Vilice in nož"</item>
+    <item msgid="8939998598599064900">"Nakupovalni voziček"</item>
+    <item msgid="3379605903308731893">"Otrok"</item>
+    <item msgid="7808668968550293112">"Živalska šapa"</item>
+    <item msgid="1000692647524056504">"Značka zvezdice"</item>
+    <item msgid="8270261073421676502">"Dve osebi"</item>
+    <item msgid="5767782819651505460">"Zvezda"</item>
+    <item msgid="4368451291862729334">"Srce"</item>
+    <item msgid="2613199102208419986">"Hiša"</item>
+    <item msgid="3022279986430275040">"Polmesec"</item>
+    <item msgid="5421089790869483206">"Ura"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
