--- a/res/values-tr/arrays.xml
+++ b/res/values-tr/arrays.xml
@@ -498,9 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"Evrak çantası"</item>
+    <item msgid="184985872234062767">"Klasik bina"</item>
+    <item msgid="9189550412466785530">"Apartman binası"</item>
+    <item msgid="2142527562511049422">"Konuşma balonu"</item>
+    <item msgid="2548100558260478605">"Bir grup insan"</item>
+    <item msgid="2270003903304578284">"Ampul"</item>
+    <item msgid="4793496619091161864">"Takvim"</item>
+    <item msgid="355583383827414575">"Koşan bir kişi"</item>
+    <item msgid="8001358013148723500">"Golf"</item>
+    <item msgid="755931364157422565">"Spor salonu dambılı"</item>
+    <item msgid="1122491217891679043">"Yüzme"</item>
+    <item msgid="5825437763616894959">"Doğa yürüyüşü yapan bir kişi"</item>
+    <item msgid="7343381753556126903">"Top atan bir kişi"</item>
+    <item msgid="7785234702090595">"Tekme atan bir kişi"</item>
+    <item msgid="8551370809943066311">"Oyun kumandası"</item>
+    <item msgid="6613149523957360458">"Sanatçı renk paleti"</item>
+    <item msgid="9183052350354526560">"Kar tanesi"</item>
+    <item msgid="1589939022701519138">"Plaj şemsiyesi"</item>
+    <item msgid="4861295101659969850">"Atölye araçları"</item>
+    <item msgid="6817957885445446596">"Çadır"</item>
+    <item msgid="5923605807513411961">"Film rulosu"</item>
+    <item msgid="7669095367618738070">"Kitap"</item>
+    <item msgid="2852435596978961693">"Nilüfer çiçeği"</item>
+    <item msgid="7021313931065738980">"İnsan aklı"</item>
+    <item msgid="6988657977896749103">"Kulaklık"</item>
+    <item msgid="7175373369979188147">"TV"</item>
+    <item msgid="8654852711800563054">"Tren"</item>
+    <item msgid="165142533839452848">"Araba"</item>
+    <item msgid="5359765481365992847">"Kruvasan"</item>
+    <item msgid="5010405583912314582">"Çatal ve bıçak"</item>
+    <item msgid="8939998598599064900">"Alışveriş sepeti"</item>
+    <item msgid="3379605903308731893">"Çocuk"</item>
+    <item msgid="7808668968550293112">"Hayvan pençesi"</item>
+    <item msgid="1000692647524056504">"Yıldız rozeti"</item>
+    <item msgid="8270261073421676502">"İki kişi"</item>
+    <item msgid="5767782819651505460">"Yıldız"</item>
+    <item msgid="4368451291862729334">"Kalp"</item>
+    <item msgid="2613199102208419986">"Ev"</item>
+    <item msgid="3022279986430275040">"Yarım ay"</item>
+    <item msgid="5421089790869483206">"Saat"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
