--- a/res/values-ur/arrays.xml
+++ b/res/values-ur/arrays.xml
@@ -498,9 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"بریف کیس"</item>
+    <item msgid="184985872234062767">"کلاسیکل عمارت"</item>
+    <item msgid="9189550412466785530">"اپارٹمنٹ والی عمارت"</item>
+    <item msgid="2142527562511049422">"اسپیچ ببل"</item>
+    <item msgid="2548100558260478605">"لوگوں کا گروپ"</item>
+    <item msgid="2270003903304578284">"لائٹ بلب"</item>
+    <item msgid="4793496619091161864">"کیلنڈر"</item>
+    <item msgid="355583383827414575">"دوڑتا ہوا شخص"</item>
+    <item msgid="8001358013148723500">"گولف"</item>
+    <item msgid="755931364157422565">"جم ڈم بیل"</item>
+    <item msgid="1122491217891679043">"تیراکی"</item>
+    <item msgid="5825437763616894959">"ہائک کرتا ہوا شخص"</item>
+    <item msgid="7343381753556126903">"گیند پھینکتا ہوا شخص"</item>
+    <item msgid="7785234702090595">"کک مارتا ہوا شخص"</item>
+    <item msgid="8551370809943066311">"گیم کنٹرولر"</item>
+    <item msgid="6613149523957360458">"آرٹسٹ رنگ کا پیلیٹ"</item>
+    <item msgid="9183052350354526560">"برف کا گولا"</item>
+    <item msgid="1589939022701519138">"ساحل کی چھتری"</item>
+    <item msgid="4861295101659969850">"ورکشاپ ٹولز"</item>
+    <item msgid="6817957885445446596">"خیمہ"</item>
+    <item msgid="5923605807513411961">"فلم ریل"</item>
+    <item msgid="7669095367618738070">"کتاب"</item>
+    <item msgid="2852435596978961693">"کنول کا پھول"</item>
+    <item msgid="7021313931065738980">"شخص کا ذہن"</item>
+    <item msgid="6988657977896749103">"ہیڈ فونز"</item>
+    <item msgid="7175373369979188147">"TV"</item>
+    <item msgid="8654852711800563054">"ٹرین"</item>
+    <item msgid="165142533839452848">"کار"</item>
+    <item msgid="5359765481365992847">"کروسان"</item>
+    <item msgid="5010405583912314582">"کانٹا اور چھری"</item>
+    <item msgid="8939998598599064900">"شاپنگ کارٹ"</item>
+    <item msgid="3379605903308731893">"بچہ"</item>
+    <item msgid="7808668968550293112">"جانور کا پنجا"</item>
+    <item msgid="1000692647524056504">"اسٹار بیج"</item>
+    <item msgid="8270261073421676502">"دو لوگ"</item>
+    <item msgid="5767782819651505460">"ستارہ"</item>
+    <item msgid="4368451291862729334">"دل"</item>
+    <item msgid="2613199102208419986">"گھر"</item>
+    <item msgid="3022279986430275040">"آدھا چاند"</item>
+    <item msgid="5421089790869483206">"گھڑی"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
