--- a/res/values-ar/arrays.xml
+++ b/res/values-ar/arrays.xml
@@ -498,9 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"حقيبة يد"</item>
+    <item msgid="184985872234062767">"مبنى كلاسيكي"</item>
+    <item msgid="9189550412466785530">"مبنى سكني"</item>
+    <item msgid="2142527562511049422">"فقاعة تفسيرية كلامية"</item>
+    <item msgid="2548100558260478605">"مجموعة من الأشخاص"</item>
+    <item msgid="2270003903304578284">"مصباح كهربائي"</item>
+    <item msgid="4793496619091161864">"تقويم"</item>
+    <item msgid="355583383827414575">"شخص يجري"</item>
+    <item msgid="8001358013148723500">"غولف"</item>
+    <item msgid="755931364157422565">"دمبل في صالة رياضية"</item>
+    <item msgid="1122491217891679043">"سباحة"</item>
+    <item msgid="5825437763616894959">"شخص يتنزه في الطبيعة"</item>
+    <item msgid="7343381753556126903">"شخص يرمي كرة"</item>
+    <item msgid="7785234702090595">"شخص يركل"</item>
+    <item msgid="8551370809943066311">"ذراع التحكّم في الألعاب"</item>
+    <item msgid="6613149523957360458">"لوحة ألوان الرسام"</item>
+    <item msgid="9183052350354526560">"ندفة ثلج"</item>
+    <item msgid="1589939022701519138">"مظلة شاطئ"</item>
+    <item msgid="4861295101659969850">"أدوات ورشة عمل"</item>
+    <item msgid="6817957885445446596">"Tent"</item>
+    <item msgid="5923605807513411961">"بكرة فيلم"</item>
+    <item msgid="7669095367618738070">"كتاب"</item>
+    <item msgid="2852435596978961693">"زهرة لوتس"</item>
+    <item msgid="7021313931065738980">"Person\'s mind"</item>
+    <item msgid="6988657977896749103">"سمّاعات رأس"</item>
+    <item msgid="7175373369979188147">"تلفزيون"</item>
+    <item msgid="8654852711800563054">"قطار"</item>
+    <item msgid="165142533839452848">"سيارة"</item>
+    <item msgid="5359765481365992847">"كرواسون"</item>
+    <item msgid="5010405583912314582">"شوكة وسكينة"</item>
+    <item msgid="8939998598599064900">"سلة تسوّق"</item>
+    <item msgid="3379605903308731893">"طفل"</item>
+    <item msgid="7808668968550293112">"مخلب حيوان"</item>
+    <item msgid="1000692647524056504">"شارة النجمة"</item>
+    <item msgid="8270261073421676502">"شخصان"</item>
+    <item msgid="5767782819651505460">"نجمة"</item>
+    <item msgid="4368451291862729334">"قلب"</item>
+    <item msgid="2613199102208419986">"منزل"</item>
+    <item msgid="3022279986430275040">"نصف قمر"</item>
+    <item msgid="5421089790869483206">"ساعة"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
