--- a/res/values-eu/arrays.xml
+++ b/res/values-eu/arrays.xml
@@ -54,7 +54,7 @@
     <item msgid="3249903732481917388">"Autentifikatzen…"</item>
     <item msgid="7789156794775399931">"IP helbidea lortzen…"</item>
     <item msgid="492518447401534767">"Konektatuta"</item>
-    <item msgid="4322989558568666518">"Etenda"</item>
+    <item msgid="4322989558568666518">"Aldi baterako etenda"</item>
     <item msgid="286164147080824297">"Deskonektatzen…"</item>
     <item msgid="1628460745311787730">"Deskonektatuta"</item>
     <item msgid="4013828218541488949">"Ezin izan da konektatu"</item>
@@ -498,45 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:0 (1216815120972438676) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:1 (184985872234062767) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:2 (9189550412466785530) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:3 (2142527562511049422) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:4 (2548100558260478605) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:5 (2270003903304578284) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:6 (4793496619091161864) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:7 (355583383827414575) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:8 (8001358013148723500) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:10 (1122491217891679043) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:11 (5825437763616894959) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:12 (7343381753556126903) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:13 (7785234702090595) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:14 (8551370809943066311) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:15 (6613149523957360458) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:16 (9183052350354526560) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:17 (1589939022701519138) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:18 (4861295101659969850) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:19 (6817957885445446596) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:20 (5923605807513411961) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:21 (7669095367618738070) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:22 (2852435596978961693) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:23 (7021313931065738980) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:24 (6988657977896749103) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:25 (7175373369979188147) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:26 (8654852711800563054) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:27 (165142533839452848) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:28 (5359765481365992847) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:29 (5010405583912314582) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:30 (8939998598599064900) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:31 (3379605903308731893) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:35 (5767782819651505460) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:36 (4368451291862729334) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:37 (2613199102208419986) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:38 (3022279986430275040) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:39 (5421089790869483206) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"Maletatxoa"</item>
+    <item msgid="184985872234062767">"Eraikin klasikoa"</item>
+    <item msgid="9189550412466785530">"Apartamentu-eraikina"</item>
+    <item msgid="2142527562511049422">"Testu-globoa"</item>
+    <item msgid="2548100558260478605">"Pertsona taldea"</item>
+    <item msgid="2270003903304578284">"Bonbilla"</item>
+    <item msgid="4793496619091161864">"Egutegia"</item>
+    <item msgid="355583383827414575">"Pertsona bat korrika"</item>
+    <item msgid="8001358013148723500">"Golfa"</item>
+    <item msgid="755931364157422565">"Gimnasioko pisua"</item>
+    <item msgid="1122491217891679043">"Igeriketa"</item>
+    <item msgid="5825437763616894959">"Pertsona bat mendian"</item>
+    <item msgid="7343381753556126903">"Pertsona bat pilota bat botatzen"</item>
+    <item msgid="7785234702090595">"Pertsona bat ostiko egiten"</item>
+    <item msgid="8551370809943066311">"Joko-kontrolagailua"</item>
+    <item msgid="6613149523957360458">"Artisten kolore-paleta"</item>
+    <item msgid="9183052350354526560">"Elur-maluta"</item>
+    <item msgid="1589939022701519138">"Eguzkitakoa"</item>
+    <item msgid="4861295101659969850">"Lantegiko tresnak"</item>
+    <item msgid="6817957885445446596">"Kanpin-denda"</item>
+    <item msgid="5923605807513411961">"Film-bobina"</item>
+    <item msgid="7669095367618738070">"Liburua"</item>
+    <item msgid="2852435596978961693">"Loto-lorea"</item>
+    <item msgid="7021313931065738980">"Pertsona baten burua"</item>
+    <item msgid="6988657977896749103">"Entzungailuak"</item>
+    <item msgid="7175373369979188147">"Telebista"</item>
+    <item msgid="8654852711800563054">"Trena"</item>
+    <item msgid="165142533839452848">"Autoa"</item>
+    <item msgid="5359765481365992847">"Croissanta"</item>
+    <item msgid="5010405583912314582">"Sardexka eta labana"</item>
+    <item msgid="8939998598599064900">"Erosketa-saskia"</item>
+    <item msgid="3379605903308731893">"Haurra"</item>
+    <item msgid="7808668968550293112">"Animalia-atzaparra"</item>
+    <item msgid="1000692647524056504">"Izar-bereizgarria"</item>
+    <item msgid="8270261073421676502">"2 pertsona"</item>
+    <item msgid="5767782819651505460">"Izarra"</item>
+    <item msgid="4368451291862729334">"Bihotza"</item>
+    <item msgid="2613199102208419986">"Etxea"</item>
+    <item msgid="3022279986430275040">"Ilargierdia"</item>
+    <item msgid="5421089790869483206">"Erlojua"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
