--- a/res/values-gu/arrays.xml
+++ b/res/values-gu/arrays.xml
@@ -498,9 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"બ્રીફકેસ"</item>
+    <item msgid="184985872234062767">"ક્લાસિકલ બિલ્ડિંગ"</item>
+    <item msgid="9189550412466785530">"અપાર્ટમેન્ટ બિલ્ડિંગ"</item>
+    <item msgid="2142527562511049422">"સ્પીચ બબલ"</item>
+    <item msgid="2548100558260478605">"લોકોનું ગ્રૂપ"</item>
+    <item msgid="2270003903304578284">"લાઇટ બલ્બ"</item>
+    <item msgid="4793496619091161864">"કૅલેન્ડર"</item>
+    <item msgid="355583383827414575">"દોડતી વ્યક્તિ"</item>
+    <item msgid="8001358013148723500">"ગોલ્ફ"</item>
+    <item msgid="755931364157422565">"જિમ ડમ્બબેલ"</item>
+    <item msgid="1122491217891679043">"સ્વિમિંગ"</item>
+    <item msgid="5825437763616894959">"હાઇક કરતી વ્યક્તિ"</item>
+    <item msgid="7343381753556126903">"બૉલ ફેંકતી વ્યક્તિ"</item>
+    <item msgid="7785234702090595">"લાત મારતી વ્યક્તિ"</item>
+    <item msgid="8551370809943066311">"ગેમ કન્ટ્રોલર"</item>
+    <item msgid="6613149523957360458">"કલાકારના વિવિધ રંગ"</item>
+    <item msgid="9183052350354526560">"સ્નોફ્લૅક"</item>
+    <item msgid="1589939022701519138">"બીચ પરની છત્રી"</item>
+    <item msgid="4861295101659969850">"વર્કશોપ ટૂલ"</item>
+    <item msgid="6817957885445446596">"તંબુ"</item>
+    <item msgid="5923605807513411961">"ફિલ્મ રીલ"</item>
+    <item msgid="7669095367618738070">"પુસ્તક"</item>
+    <item msgid="2852435596978961693">"કમળનું ફૂલ"</item>
+    <item msgid="7021313931065738980">"વ્યક્તિનું મગજ"</item>
+    <item msgid="6988657977896749103">"હૅડફોન"</item>
+    <item msgid="7175373369979188147">"ટીવી"</item>
+    <item msgid="8654852711800563054">"ટ્રેન"</item>
+    <item msgid="165142533839452848">"કાર"</item>
+    <item msgid="5359765481365992847">"ક્રૉસાં"</item>
+    <item msgid="5010405583912314582">"છરી કાંટાવાળી ચમચી અને છરી"</item>
+    <item msgid="8939998598599064900">"શૉપિંગ કાર્ટ"</item>
+    <item msgid="3379605903308731893">"બાળક"</item>
+    <item msgid="7808668968550293112">"પ્રાણીનો પંજો"</item>
+    <item msgid="1000692647524056504">"સ્ટાર બૅજ"</item>
+    <item msgid="8270261073421676502">"બે લોકો"</item>
+    <item msgid="5767782819651505460">"સ્ટાર"</item>
+    <item msgid="4368451291862729334">"હૃદય"</item>
+    <item msgid="2613199102208419986">"ઘર"</item>
+    <item msgid="3022279986430275040">"અર્ધચંદ્ર"</item>
+    <item msgid="5421089790869483206">"ઘડિયાળ"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
