--- a/res/values-hi/arrays.xml
+++ b/res/values-hi/arrays.xml
@@ -87,7 +87,7 @@
   <string-array name="bluetooth_leaudio_mode">
     <item msgid="5307106570247137458">"Disabled"</item>
     <item msgid="7781484297606806796">"Unicast"</item>
-    <item msgid="6667451574264144311">"Unicast and Broadcast"</item>
+    <item msgid="6667451574264144311">"यूनिकास्ट और ब्रॉडकास्ट"</item>
   </string-array>
   <string-array name="bluetooth_max_connected_audio_devices">
     <item msgid="4792793579224104167">"सिस्टम की डिफ़ॉल्ट सेटिंग का इस्तेमाल करें: <xliff:g id="DEFAULT_BLUETOOTH_MAX_CONNECTED_AUDIO_DEVICES">%1$d</xliff:g>"</item>
@@ -498,45 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:0 (1216815120972438676) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:1 (184985872234062767) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:2 (9189550412466785530) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:3 (2142527562511049422) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:4 (2548100558260478605) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:5 (2270003903304578284) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:6 (4793496619091161864) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:7 (355583383827414575) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:8 (8001358013148723500) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:10 (1122491217891679043) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:11 (5825437763616894959) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:12 (7343381753556126903) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:13 (7785234702090595) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:14 (8551370809943066311) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:15 (6613149523957360458) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:16 (9183052350354526560) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:17 (1589939022701519138) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:18 (4861295101659969850) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:19 (6817957885445446596) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:20 (5923605807513411961) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:21 (7669095367618738070) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:22 (2852435596978961693) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:23 (7021313931065738980) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:24 (6988657977896749103) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:25 (7175373369979188147) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:26 (8654852711800563054) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:27 (165142533839452848) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:28 (5359765481365992847) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:29 (5010405583912314582) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:30 (8939998598599064900) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:31 (3379605903308731893) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:35 (5767782819651505460) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:36 (4368451291862729334) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:37 (2613199102208419986) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:38 (3022279986430275040) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:39 (5421089790869483206) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"ब्रीफ़केस"</item>
+    <item msgid="184985872234062767">"क्लासिकल बिल्डिंग"</item>
+    <item msgid="9189550412466785530">"अपार्टमेंट बिल्डिंग"</item>
+    <item msgid="2142527562511049422">"स्पीच बबल"</item>
+    <item msgid="2548100558260478605">"लोगों का ग्रुप"</item>
+    <item msgid="2270003903304578284">"बल्ब"</item>
+    <item msgid="4793496619091161864">"कैलेंडर"</item>
+    <item msgid="355583383827414575">"दौड़ता हुआ व्यक्ति"</item>
+    <item msgid="8001358013148723500">"गॉल्फ़"</item>
+    <item msgid="755931364157422565">"जिम डंबल"</item>
+    <item msgid="1122491217891679043">"तैराकी"</item>
+    <item msgid="5825437763616894959">"पैदल चलता हुआ व्यक्ति"</item>
+    <item msgid="7343381753556126903">"बॉल फेंकता हुआ व्यक्ति"</item>
+    <item msgid="7785234702090595">"किक मारता हुआ व्यक्ति"</item>
+    <item msgid="8551370809943066311">"गेम कंट्रोलर"</item>
+    <item msgid="6613149523957360458">"कलाकार के लिए रंग पटल"</item>
+    <item msgid="9183052350354526560">"स्नोफ़्लेक"</item>
+    <item msgid="1589939022701519138">"बीच अंब्रेला"</item>
+    <item msgid="4861295101659969850">"वर्कशॉप टूल"</item>
+    <item msgid="6817957885445446596">"टेंट"</item>
+    <item msgid="5923605807513411961">"फ़िल्म रील"</item>
+    <item msgid="7669095367618738070">"किताब"</item>
+    <item msgid="2852435596978961693">"कमल का फूल"</item>
+    <item msgid="7021313931065738980">"व्यक्ति का दिमाग"</item>
+    <item msgid="6988657977896749103">"हेडफ़ोन"</item>
+    <item msgid="7175373369979188147">"टीवी"</item>
+    <item msgid="8654852711800563054">"ट्रेन"</item>
+    <item msgid="165142533839452848">"कार"</item>
+    <item msgid="5359765481365992847">"क्रोसौं"</item>
+    <item msgid="5010405583912314582">"कांटा और चाकू"</item>
+    <item msgid="8939998598599064900">"शॉपिंग कार्ट"</item>
+    <item msgid="3379605903308731893">"बच्चा"</item>
+    <item msgid="7808668968550293112">"जानवर का पंजा"</item>
+    <item msgid="1000692647524056504">"स्टार बैज"</item>
+    <item msgid="8270261073421676502">"दो लोग"</item>
+    <item msgid="5767782819651505460">"स्टार"</item>
+    <item msgid="4368451291862729334">"दिल"</item>
+    <item msgid="2613199102208419986">"घर"</item>
+    <item msgid="3022279986430275040">"हाफ़-मून"</item>
+    <item msgid="5421089790869483206">"घड़ी"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
