--- a/res/values-hr/arrays.xml
+++ b/res/values-hr/arrays.xml
@@ -498,9 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"Aktovka"</item>
+    <item msgid="184985872234062767">"Klasična zgrada"</item>
+    <item msgid="9189550412466785530">"Stambena zgrada"</item>
+    <item msgid="2142527562511049422">"Govorni oblačić"</item>
+    <item msgid="2548100558260478605">"Grupa ljudi"</item>
+    <item msgid="2270003903304578284">"Žarulja"</item>
+    <item msgid="4793496619091161864">"Kalendar"</item>
+    <item msgid="355583383827414575">"Osoba trči"</item>
+    <item msgid="8001358013148723500">"Golf"</item>
+    <item msgid="755931364157422565">"Bučica za teretanu"</item>
+    <item msgid="1122491217891679043">"Plivanje"</item>
+    <item msgid="5825437763616894959">"Osoba pješači"</item>
+    <item msgid="7343381753556126903">"Osoba baca loptu"</item>
+    <item msgid="7785234702090595">"Osoba udara"</item>
+    <item msgid="8551370809943066311">"Kontroler za videoigre"</item>
+    <item msgid="6613149523957360458">"Umjetnička paleta boja"</item>
+    <item msgid="9183052350354526560">"Snježna pahuljica"</item>
+    <item msgid="1589939022701519138">"Suncobran za plažu"</item>
+    <item msgid="4861295101659969850">"Radionički alati"</item>
+    <item msgid="6817957885445446596">"Šator"</item>
+    <item msgid="5923605807513411961">"Filmska vrpca"</item>
+    <item msgid="7669095367618738070">"Knjiga"</item>
+    <item msgid="2852435596978961693">"Lotosov cvijet"</item>
+    <item msgid="7021313931065738980">"Um osobe"</item>
+    <item msgid="6988657977896749103">"Slušalice"</item>
+    <item msgid="7175373369979188147">"TV"</item>
+    <item msgid="8654852711800563054">"Vlak"</item>
+    <item msgid="165142533839452848">"Automobil"</item>
+    <item msgid="5359765481365992847">"Kroasan"</item>
+    <item msgid="5010405583912314582">"Vilica i nož"</item>
+    <item msgid="8939998598599064900">"Košarica"</item>
+    <item msgid="3379605903308731893">"Dijete"</item>
+    <item msgid="7808668968550293112">"Životinjska šapa"</item>
+    <item msgid="1000692647524056504">"Značka sa zvjezdicom"</item>
+    <item msgid="8270261073421676502">"Dvije osobe"</item>
+    <item msgid="5767782819651505460">"Zvijezda"</item>
+    <item msgid="4368451291862729334">"Srce"</item>
+    <item msgid="2613199102208419986">"Kuća"</item>
+    <item msgid="3022279986430275040">"Polumjesec"</item>
+    <item msgid="5421089790869483206">"Sat"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
