--- a/res/values-ja/arrays.xml
+++ b/res/values-ja/arrays.xml
@@ -498,9 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"書類カバン"</item>
+    <item msgid="184985872234062767">"古典的な建物"</item>
+    <item msgid="9189550412466785530">"アパート"</item>
+    <item msgid="2142527562511049422">"吹き出し"</item>
+    <item msgid="2548100558260478605">"人々のグループ写真"</item>
+    <item msgid="2270003903304578284">"電球"</item>
+    <item msgid="4793496619091161864">"カレンダー"</item>
+    <item msgid="355583383827414575">"ランニングしている人"</item>
+    <item msgid="8001358013148723500">"ゴルフ"</item>
+    <item msgid="755931364157422565">"ジムのダンベル"</item>
+    <item msgid="1122491217891679043">"水泳"</item>
+    <item msgid="5825437763616894959">"ハイキングをしている人"</item>
+    <item msgid="7343381753556126903">"ボールを投げている人"</item>
+    <item msgid="7785234702090595">"蹴っている人"</item>
+    <item msgid="8551370809943066311">"ゲーム コントローラ"</item>
+    <item msgid="6613149523957360458">"アーティストのカラーパレット"</item>
+    <item msgid="9183052350354526560">"雪の結晶"</item>
+    <item msgid="1589939022701519138">"ビーチパラソル"</item>
+    <item msgid="4861295101659969850">"工具セット"</item>
+    <item msgid="6817957885445446596">"テント"</item>
+    <item msgid="5923605807513411961">"フィルムリール"</item>
+    <item msgid="7669095367618738070">"書籍"</item>
+    <item msgid="2852435596978961693">"ハスの花"</item>
+    <item msgid="7021313931065738980">"人の心"</item>
+    <item msgid="6988657977896749103">"ヘッドフォン"</item>
+    <item msgid="7175373369979188147">"テレビ"</item>
+    <item msgid="8654852711800563054">"電車"</item>
+    <item msgid="165142533839452848">"車"</item>
+    <item msgid="5359765481365992847">"クロワッサン"</item>
+    <item msgid="5010405583912314582">"ナイフとフォーク"</item>
+    <item msgid="8939998598599064900">"ショッピング カート"</item>
+    <item msgid="3379605903308731893">"子ども"</item>
+    <item msgid="7808668968550293112">"動物の足"</item>
+    <item msgid="1000692647524056504">"スターバッジ"</item>
+    <item msgid="8270261073421676502">"2 人"</item>
+    <item msgid="5767782819651505460">"スター"</item>
+    <item msgid="4368451291862729334">"ハート"</item>
+    <item msgid="2613199102208419986">"家"</item>
+    <item msgid="3022279986430275040">"半月"</item>
+    <item msgid="5421089790869483206">"時計"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
