--- a/res/values-ml/arrays.xml
+++ b/res/values-ml/arrays.xml
@@ -498,9 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"ബ്രീഫ്കെയ്‌സ്"</item>
+    <item msgid="184985872234062767">"ക്ലാസിക്കൽ ബില്‍ഡിംഗ്"</item>
+    <item msgid="9189550412466785530">"അപ്പാർട്ട്മെന്റ് ബിൽഡിംഗ്"</item>
+    <item msgid="2142527562511049422">"സ്പീച്ച് ബബിൾ"</item>
+    <item msgid="2548100558260478605">"ആളുകളുടെ കൂട്ടം"</item>
+    <item msgid="2270003903304578284">"ലൈറ്റ്ബൾബ്"</item>
+    <item msgid="4793496619091161864">"കലണ്ടർ"</item>
+    <item msgid="355583383827414575">"ഓടുന്ന വ്യക്തി"</item>
+    <item msgid="8001358013148723500">"ഗോൾഫ്"</item>
+    <item msgid="755931364157422565">"ജിം ഡംബെൽ"</item>
+    <item msgid="1122491217891679043">"നീന്തൽ"</item>
+    <item msgid="5825437763616894959">"ഹൈക്ക് ചെയ്യുന്ന വ്യക്തി"</item>
+    <item msgid="7343381753556126903">"പന്ത് എറിയുന്ന വ്യക്തി"</item>
+    <item msgid="7785234702090595">"കിക്ക് ചെയ്യുന്ന വ്യക്തി"</item>
+    <item msgid="8551370809943066311">"ഗെയിം കൺട്രോളർ"</item>
+    <item msgid="6613149523957360458">"ആർട്ടിസ്റ്റിന്റെ വർണ്ണ പാലെറ്റ്"</item>
+    <item msgid="9183052350354526560">"മഞ്ഞുകട്ട"</item>
+    <item msgid="1589939022701519138">"ബീച്ച് കുട"</item>
+    <item msgid="4861295101659969850">"വർക്ക്‌ഷോപ്പ് ടൂളുകൾ"</item>
+    <item msgid="6817957885445446596">"ടെന്റ്"</item>
+    <item msgid="5923605807513411961">"ഫിലിം റീൽ"</item>
+    <item msgid="7669095367618738070">"പുസ്‌തകം"</item>
+    <item msgid="2852435596978961693">"താമരപ്പൂവ്"</item>
+    <item msgid="7021313931065738980">"മനസ്സ്"</item>
+    <item msgid="6988657977896749103">"ഹെഡ്‌ഫോണുകൾ"</item>
+    <item msgid="7175373369979188147">"ടിവി"</item>
+    <item msgid="8654852711800563054">"ട്രെയിൻ"</item>
+    <item msgid="165142533839452848">"കാർ"</item>
+    <item msgid="5359765481365992847">"ക്രോയ്‌സെന്റ്"</item>
+    <item msgid="5010405583912314582">"ഫോർക്കും കത്തിയും"</item>
+    <item msgid="8939998598599064900">"ഷോപ്പിംഗ് കാർട്ട്"</item>
+    <item msgid="3379605903308731893">"കുട്ടി"</item>
+    <item msgid="7808668968550293112">"മൃഗത്തിന്റെ കാൽപ്പാദം"</item>
+    <item msgid="1000692647524056504">"സ്റ്റാർ ബാഡ്‌ജ്"</item>
+    <item msgid="8270261073421676502">"രണ്ട് പേർ"</item>
+    <item msgid="5767782819651505460">"നക്ഷത്രം"</item>
+    <item msgid="4368451291862729334">"ഹൃദയം"</item>
+    <item msgid="2613199102208419986">"വീട്"</item>
+    <item msgid="3022279986430275040">"അർദ്ധ ചന്ദ്രൻ"</item>
+    <item msgid="5421089790869483206">"ക്ലോക്ക്"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
