--- a/res/values-or/arrays.xml
+++ b/res/values-or/arrays.xml
@@ -498,45 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:0 (1216815120972438676) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:1 (184985872234062767) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:2 (9189550412466785530) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:3 (2142527562511049422) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:4 (2548100558260478605) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:5 (2270003903304578284) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:6 (4793496619091161864) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:7 (355583383827414575) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:8 (8001358013148723500) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:10 (1122491217891679043) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:11 (5825437763616894959) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:12 (7343381753556126903) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:13 (7785234702090595) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:14 (8551370809943066311) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:15 (6613149523957360458) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:16 (9183052350354526560) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:17 (1589939022701519138) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:18 (4861295101659969850) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:19 (6817957885445446596) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:20 (5923605807513411961) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:21 (7669095367618738070) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:22 (2852435596978961693) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:23 (7021313931065738980) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:24 (6988657977896749103) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:25 (7175373369979188147) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:26 (8654852711800563054) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:27 (165142533839452848) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:28 (5359765481365992847) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:29 (5010405583912314582) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:30 (8939998598599064900) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:31 (3379605903308731893) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:35 (5767782819651505460) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:36 (4368451291862729334) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:37 (2613199102208419986) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:38 (3022279986430275040) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:39 (5421089790869483206) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"ବ୍ରିଫକେସ"</item>
+    <item msgid="184985872234062767">"କ୍ଲାସିକାଲ ବିଲ୍ଡିଂ"</item>
+    <item msgid="9189550412466785530">"ଆପାର୍ଟମେଣ୍ଟ ବିଲ୍ଡିଂ"</item>
+    <item msgid="2142527562511049422">"ସ୍ପିଚ ବବଲ"</item>
+    <item msgid="2548100558260478605">"ଲୋକଙ୍କ ଗୋଷ୍ଠୀ"</item>
+    <item msgid="2270003903304578284">"ଲାଇଟବଲ୍ବ"</item>
+    <item msgid="4793496619091161864">"କେଲେଣ୍ଡର"</item>
+    <item msgid="355583383827414575">"ଦୌଡ଼ୁଥିବା ବ୍ୟକ୍ତି"</item>
+    <item msgid="8001358013148723500">"ଗଲ୍ଫ"</item>
+    <item msgid="755931364157422565">"ଜିମ ଡମ୍ବେଲ"</item>
+    <item msgid="1122491217891679043">"ସୁଇମିଂ"</item>
+    <item msgid="5825437763616894959">"ହାଇକିଂ କରୁଥିବା ବ୍ୟକ୍ତି"</item>
+    <item msgid="7343381753556126903">"ବଲ ଫିଙ୍ଗୁଥିବା ବ୍ୟକ୍ତି"</item>
+    <item msgid="7785234702090595">"କିକ ମାରୁଥିବା ବ୍ୟକ୍ତି"</item>
+    <item msgid="8551370809943066311">"ଗେମ କଣ୍ଟ୍ରୋଲର"</item>
+    <item msgid="6613149523957360458">"କଳାକାରଙ୍କ ରଙ୍ଗ ପେଲେଟ"</item>
+    <item msgid="9183052350354526560">"ସ୍ନୋଫ୍ଲେକ"</item>
+    <item msgid="1589939022701519138">"ବେଳାଭୂମିରେ ଛତା"</item>
+    <item msgid="4861295101659969850">"ୱାର୍କସପ ଟୁଲ"</item>
+    <item msgid="6817957885445446596">"ଟେଣ୍ଟ"</item>
+    <item msgid="5923605807513411961">"ଫିଲ୍ମ ରିଲ"</item>
+    <item msgid="7669095367618738070">"ବହି"</item>
+    <item msgid="2852435596978961693">"ପଦ୍ମ ଫୁଲ"</item>
+    <item msgid="7021313931065738980">"ବ୍ୟକ୍ତିଙ୍କ ମନ"</item>
+    <item msgid="6988657977896749103">"ହେଡଫୋନଗୁଡ଼ିକ"</item>
+    <item msgid="7175373369979188147">"ଟିଭି"</item>
+    <item msgid="8654852711800563054">"ଟ୍ରେନ"</item>
+    <item msgid="165142533839452848">"କାର"</item>
+    <item msgid="5359765481365992847">"କ୍ରୋଇସାଣ୍ଟ"</item>
+    <item msgid="5010405583912314582">"କଣ୍ଟା ଓ ଛୁରୀ"</item>
+    <item msgid="8939998598599064900">"ସପିଂ କାର୍ଟ"</item>
+    <item msgid="3379605903308731893">"ପିଲା"</item>
+    <item msgid="7808668968550293112">"ପଶୁର ପଞ୍ଜା"</item>
+    <item msgid="1000692647524056504">"ଷ୍ଟାର ବେଜ"</item>
+    <item msgid="8270261073421676502">"ଦୁଇ ଜଣ ଲୋକ"</item>
+    <item msgid="5767782819651505460">"ଷ୍ଟାର"</item>
+    <item msgid="4368451291862729334">"ହାର୍ଟ"</item>
+    <item msgid="2613199102208419986">"ଘର"</item>
+    <item msgid="3022279986430275040">"ଅର୍ଦ୍ଧ-ଚନ୍ଦ୍ର"</item>
+    <item msgid="5421089790869483206">"ଘଣ୍ଟା"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
