--- a/res/values-sq/arrays.xml
+++ b/res/values-sq/arrays.xml
@@ -498,45 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:0 (1216815120972438676) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:1 (184985872234062767) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:2 (9189550412466785530) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:3 (2142527562511049422) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:4 (2548100558260478605) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:5 (2270003903304578284) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:6 (4793496619091161864) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:7 (355583383827414575) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:8 (8001358013148723500) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:10 (1122491217891679043) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:11 (5825437763616894959) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:12 (7343381753556126903) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:13 (7785234702090595) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:14 (8551370809943066311) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:15 (6613149523957360458) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:16 (9183052350354526560) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:17 (1589939022701519138) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:18 (4861295101659969850) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:19 (6817957885445446596) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:20 (5923605807513411961) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:21 (7669095367618738070) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:22 (2852435596978961693) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:23 (7021313931065738980) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:24 (6988657977896749103) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:25 (7175373369979188147) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:26 (8654852711800563054) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:27 (165142533839452848) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:28 (5359765481365992847) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:29 (5010405583912314582) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:30 (8939998598599064900) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:31 (3379605903308731893) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:35 (5767782819651505460) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:36 (4368451291862729334) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:37 (2613199102208419986) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:38 (3022279986430275040) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:39 (5421089790869483206) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"Valixhe"</item>
+    <item msgid="184985872234062767">"Ndërtesë klasike"</item>
+    <item msgid="9189550412466785530">"Ndërtesë me apartamente"</item>
+    <item msgid="2142527562511049422">"Flluskë bisede"</item>
+    <item msgid="2548100558260478605">"Grup personash"</item>
+    <item msgid="2270003903304578284">"Llambë"</item>
+    <item msgid="4793496619091161864">"Kalendar"</item>
+    <item msgid="355583383827414575">"Person duke vrapuar"</item>
+    <item msgid="8001358013148723500">"Golf"</item>
+    <item msgid="755931364157422565">"Girë palestre"</item>
+    <item msgid="1122491217891679043">"Not"</item>
+    <item msgid="5825437763616894959">"Person në ekskursion"</item>
+    <item msgid="7343381753556126903">"Person duke hedhur topin"</item>
+    <item msgid="7785234702090595">"Person duke shkelmuar"</item>
+    <item msgid="8551370809943066311">"Kontrolluesi i lojës"</item>
+    <item msgid="6613149523957360458">"Paleta e ngjyrave e artistit"</item>
+    <item msgid="9183052350354526560">"Flok dëbore"</item>
+    <item msgid="1589939022701519138">"Çadër plazhi"</item>
+    <item msgid="4861295101659969850">"Vegla punishteje"</item>
+    <item msgid="6817957885445446596">"Tendë"</item>
+    <item msgid="5923605807513411961">"Bobina e filmit"</item>
+    <item msgid="7669095367618738070">"Libër"</item>
+    <item msgid="2852435596978961693">"Zambak uji"</item>
+    <item msgid="7021313931065738980">"Mendja e një personi"</item>
+    <item msgid="6988657977896749103">"Kufje"</item>
+    <item msgid="7175373369979188147">"Televizor"</item>
+    <item msgid="8654852711800563054">"Tren"</item>
+    <item msgid="165142533839452848">"Makinë"</item>
+    <item msgid="5359765481365992847">"Briosh"</item>
+    <item msgid="5010405583912314582">"Pirun dhe thikë"</item>
+    <item msgid="8939998598599064900">"Karroca e blerjes"</item>
+    <item msgid="3379605903308731893">"Fëmijë"</item>
+    <item msgid="7808668968550293112">"Putër kafshe"</item>
+    <item msgid="1000692647524056504">"Stema e yllit"</item>
+    <item msgid="8270261073421676502">"Dy persona"</item>
+    <item msgid="5767782819651505460">"Yll"</item>
+    <item msgid="4368451291862729334">"Zemër"</item>
+    <item msgid="2613199102208419986">"Shtëpi"</item>
+    <item msgid="3022279986430275040">"Gjysmëhënë"</item>
+    <item msgid="5421089790869483206">"Orë"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
