--- a/res/values-th/arrays.xml
+++ b/res/values-th/arrays.xml
@@ -498,9 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"กระเป๋าเอกสาร"</item>
+    <item msgid="184985872234062767">"อาคารคลาสสิก"</item>
+    <item msgid="9189550412466785530">"อาคารอพาร์ตเมนต์"</item>
+    <item msgid="2142527562511049422">"ลูกโป่งคำพูด"</item>
+    <item msgid="2548100558260478605">"กลุ่มคน"</item>
+    <item msgid="2270003903304578284">"หลอดไฟ"</item>
+    <item msgid="4793496619091161864">"ปฏิทิน"</item>
+    <item msgid="355583383827414575">"คนกำลังวิ่ง"</item>
+    <item msgid="8001358013148723500">"กอล์ฟ"</item>
+    <item msgid="755931364157422565">"ดัมเบลล์ในยิม"</item>
+    <item msgid="1122491217891679043">"ว่ายน้ำ"</item>
+    <item msgid="5825437763616894959">"คนกำลังปีนเขา"</item>
+    <item msgid="7343381753556126903">"คนขว้างบอล"</item>
+    <item msgid="7785234702090595">"คนทำท่าเตะ"</item>
+    <item msgid="8551370809943066311">"เกมคอนโทรลเลอร์"</item>
+    <item msgid="6613149523957360458">"จานสีของศิลปิน"</item>
+    <item msgid="9183052350354526560">"เกล็ดหิมะ"</item>
+    <item msgid="1589939022701519138">"ร่มชายหาด"</item>
+    <item msgid="4861295101659969850">"เครื่องมือเวิร์กช็อป"</item>
+    <item msgid="6817957885445446596">"เต็นท์"</item>
+    <item msgid="5923605807513411961">"ม้วนฟิล์ม"</item>
+    <item msgid="7669095367618738070">"หนังสือ"</item>
+    <item msgid="2852435596978961693">"ดอกบัว"</item>
+    <item msgid="7021313931065738980">"คนกำลังครุ่นคิด"</item>
+    <item msgid="6988657977896749103">"หูฟัง"</item>
+    <item msgid="7175373369979188147">"ทีวี"</item>
+    <item msgid="8654852711800563054">"รถไฟ"</item>
+    <item msgid="165142533839452848">"รถยนต์"</item>
+    <item msgid="5359765481365992847">"ครัวซองต์"</item>
+    <item msgid="5010405583912314582">"ส้อมและมีด"</item>
+    <item msgid="8939998598599064900">"รถเข็นสินค้า"</item>
+    <item msgid="3379605903308731893">"บุตร"</item>
+    <item msgid="7808668968550293112">"อุ้งเท้าสัตว์"</item>
+    <item msgid="1000692647524056504">"ป้ายดาว"</item>
+    <item msgid="8270261073421676502">"คน 2 คน"</item>
+    <item msgid="5767782819651505460">"ดาว"</item>
+    <item msgid="4368451291862729334">"หัวใจ"</item>
+    <item msgid="2613199102208419986">"บ้าน"</item>
+    <item msgid="3022279986430275040">"พระจันทร์ครึ่งดวง"</item>
+    <item msgid="5421089790869483206">"นาฬิกา"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
