--- a/res/values-uz/arrays.xml
+++ b/res/values-uz/arrays.xml
@@ -498,9 +498,48 @@
     <!-- no translation found for private_space_auto_lock_options:0 (551584871228110817) -->
     <!-- no translation found for private_space_auto_lock_options:1 (3263162333754809690) -->
     <!-- no translation found for private_space_auto_lock_options:2 (1575103586471380629) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:32 (7808668968550293112) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:33 (1000692647524056504) -->
-    <!-- no translation found for zen_mode_icon_options_descriptions:34 (8270261073421676502) -->
+  <string-array name="zen_mode_icon_options_descriptions">
+    <item msgid="1216815120972438676">"Portfel"</item>
+    <item msgid="184985872234062767">"Klassik bino"</item>
+    <item msgid="9189550412466785530">"Uy-joy maskani"</item>
+    <item msgid="2142527562511049422">"Izohli havola"</item>
+    <item msgid="2548100558260478605">"Odamlar guruhi"</item>
+    <item msgid="2270003903304578284">"Elektr lampa"</item>
+    <item msgid="4793496619091161864">"Taqvim"</item>
+    <item msgid="355583383827414575">"Yugurayotgan odam"</item>
+    <item msgid="8001358013148723500">"Golf"</item>
+    <item msgid="755931364157422565">"Sport zalidagi gantel"</item>
+    <item msgid="1122491217891679043">"Suzish"</item>
+    <item msgid="5825437763616894959">"Piyoda sayrdagi odam"</item>
+    <item msgid="7343381753556126903">"Koptok otayotgan odam"</item>
+    <item msgid="7785234702090595">"Tepayotgan odam"</item>
+    <item msgid="8551370809943066311">"Oʻyin kontrolleri"</item>
+    <item msgid="6613149523957360458">"Rassom rang palitrasi"</item>
+    <item msgid="9183052350354526560">"Qor parchasi"</item>
+    <item msgid="1589939022701519138">"Sohil soyaboni"</item>
+    <item msgid="4861295101659969850">"Asbob-uskunalar"</item>
+    <item msgid="6817957885445446596">"Chodir"</item>
+    <item msgid="5923605807513411961">"Plyonka ruloni"</item>
+    <item msgid="7669095367618738070">"Kitob"</item>
+    <item msgid="2852435596978961693">"Lotus guli"</item>
+    <item msgid="7021313931065738980">"Odam aqli"</item>
+    <item msgid="6988657977896749103">"Quloqliklar"</item>
+    <item msgid="7175373369979188147">"TV"</item>
+    <item msgid="8654852711800563054">"Poyezd"</item>
+    <item msgid="165142533839452848">"Avtomobil"</item>
+    <item msgid="5359765481365992847">"Kruasan"</item>
+    <item msgid="5010405583912314582">"Sanchqi va pichoq"</item>
+    <item msgid="8939998598599064900">"Xarid savati"</item>
+    <item msgid="3379605903308731893">"Bola"</item>
+    <item msgid="7808668968550293112">"Jonivor panjasi"</item>
+    <item msgid="1000692647524056504">"Yulduzcha nishoni"</item>
+    <item msgid="8270261073421676502">"Ikki kishi"</item>
+    <item msgid="5767782819651505460">"Yulduz"</item>
+    <item msgid="4368451291862729334">"Yurak"</item>
+    <item msgid="2613199102208419986">"Uy"</item>
+    <item msgid="3022279986430275040">"Yarim oy"</item>
+    <item msgid="5421089790869483206">"Soat"</item>
+  </string-array>
   <string-array name="display_over_apps_permission_change_exempt">
   </string-array>
 </resources>
